- updated pot and po files

--- a/po/bs.po
+++ b/po/bs.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2002-07-23 18:27+0200\n"
 "Last-Translator: Damir Bjelobradic <Nagual@lugbih.org>\n"
 "Language-Team: Bosnian <i18n@suse.de>\n"
@@ -12,6 +12,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr ""
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -19,6 +22,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -37,6 +53,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -111,6 +130,9 @@ msgstr ""
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr ""
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr ""
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr ""
 
@@ -142,6 +164,15 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
+msgstr ""
+
+msgid "\tsnapper get-config"
+msgstr ""
+
+msgid "\tsnapper list"
+msgstr ""
+
+msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -189,6 +220,18 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
+msgid "    Options for 'get-config' command:"
+msgstr ""
+
+msgid "    Options for 'list' command:"
+msgstr ""
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -222,6 +265,15 @@ msgstr ""
 msgid "  Delete snapshot:"
 msgstr ""
 
+msgid "  Get config:"
+msgstr ""
+
+msgid "  List configs:"
+msgstr ""
+
+msgid "  List snapshots:"
+msgstr ""
+
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -241,6 +293,9 @@ msgid "  Umount snapshot:"
 msgstr ""
 
 msgid "  Undo changes:"
+msgstr ""
+
+msgid "#"
 msgstr ""
 
 #. TRANSLATORS: used to construct list of values
@@ -265,6 +320,9 @@ msgstr "Pronađen %s datotečni sistem."
 #, fuzzy
 msgid "ACL error."
 msgstr "Greška"
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr ""
@@ -296,6 +354,9 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Cleanup"
+msgstr ""
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr ""
 
@@ -317,7 +378,16 @@ msgstr ""
 msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
+msgid "Command 'get-config' does not take arguments."
+msgstr ""
+
 msgid "Command 'help' does not take arguments."
+msgstr ""
+
+msgid "Command 'list' does not take arguments."
+msgstr ""
+
+msgid "Command 'list-configs' does not take arguments."
 msgstr ""
 
 msgid "Command 'modify' needs at least one argument."
@@ -352,6 +422,9 @@ msgid "Command 'undochange' needs at least one argument."
 msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
+msgstr ""
+
+msgid "Config"
 msgstr ""
 
 #, c-format
@@ -404,6 +477,12 @@ msgstr ""
 msgid "Creating snapshot failed."
 msgstr ""
 
+msgid "Date"
+msgstr ""
+
+msgid "Default"
+msgstr ""
+
 # %s is either BOOTP or DHCP
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
@@ -421,6 +500,9 @@ msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "%s podešavanje nije uspjelo."
 msgstr[1] "%s podešavanje nije uspjelo."
 msgstr[2] "%s podešavanje nije uspjelo."
+
+msgid "Description"
+msgstr "Opis"
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -513,6 +595,10 @@ msgstr "%s podešavanje nije uspjelo."
 msgid "Invalid ambit '%s'."
 msgstr ""
 
+#, c-format
+msgid "Invalid column '%s'."
+msgstr ""
+
 msgid "Invalid configdata."
 msgstr ""
 
@@ -549,6 +635,11 @@ msgstr ""
 
 msgid "Invalid userdata."
 msgstr ""
+
+# KE
+#, fuzzy
+msgid "Key"
+msgstr "Kenija"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -619,6 +710,18 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+msgid "Post #"
+msgstr ""
+
+msgid "Post Date"
+msgstr ""
+
+msgid "Pre #"
+msgstr ""
+
+msgid "Pre Date"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Greška"
@@ -636,6 +739,9 @@ msgid "Snapshot '%u' not found."
 msgstr "Pronađen %s datotečni sistem."
 
 msgid "Snapshot is in use."
+msgstr ""
+
+msgid "Subvolume"
 msgstr ""
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
@@ -661,6 +767,9 @@ msgstr ""
 
 msgid "Try 'snapper --help' for more information."
 msgstr ""
+
+msgid "Type"
+msgstr "Vrsta"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -696,6 +805,15 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+msgid "User"
+msgstr ""
+
+msgid "Userdata"
+msgstr ""
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
@@ -703,6 +821,9 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+msgid "Value"
+msgstr "Vrijednost"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -740,6 +861,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr ""
 
+msgid "no"
+msgstr ""
+
 msgid "nothing to do"
 msgstr ""
 
@@ -749,19 +873,8 @@ msgstr ""
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
 
-#~ msgid "Description"
-#~ msgstr "Opis"
-
-# KE
-#, fuzzy
-#~ msgid "Key"
-#~ msgstr "Kenija"
-
-#~ msgid "Type"
-#~ msgstr "Vrsta"
-
-#~ msgid "Value"
-#~ msgstr "Vrijednost"
+msgid "yes"
+msgstr ""
 
 #, fuzzy
 #~ msgid "Quota failure (%s)."
