--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: autoinst.fi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2019-12-01 20:54+0000\n"
 "Last-Translator: Jaanus Ojangu <jaanus.ojangu@gmail.com>\n"
 "Language-Team: Estonian <https://l10n.opensuse.org/projects/snapper/master/et/>\n"
@@ -13,6 +13,9 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.6.1\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr "\t--all-configs, -a\t\tKõigi juurdepääsetavate konfiguratsioonide hetktõmmitse nimekiri."
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -21,6 +24,19 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tPuhastusalgoritm hetktõmmise jaoks."
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tPuhastusalgoritm hetktõmmise jaoks."
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
+msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <command>\t\tKäivitage käsk ja looge eel- ja järelhetketõmmis."
@@ -39,6 +55,9 @@ msgstr "\t--description, -d <description>\tHetkekoopia kirjeldus."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <command>\t\tFailide võrdlemise käsk."
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--disable-used-space\t\tEi näita kasutatud ruumi."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <options>\tLisavalikud edastatud diff-käsule.."
@@ -112,6 +131,9 @@ msgstr "\t--template, -t <name>\t\tKasutatava seadistusmalli nimi."
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr "\t--type, -t <type>\t\tHetkekoopia tüüp."
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr "\t--type, -t <type>\t\tNäidatavate hetketõmmiste tüüp."
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr "\t--userdata, -u <userdata>\tKasutaja andmed hetketõmmise jaoks."
 
@@ -144,6 +166,15 @@ msgstr "\t'snapper delete-config' kustutamise seadistus"
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
 msgstr "\tsnapper diff <number1>..<number2> [failid]"
+
+msgid "\tsnapper get-config"
+msgstr "\tsnapper get-config 'vali seaded'"
+
+msgid "\tsnapper list"
+msgstr "\tsnapper loetelu"
+
+msgid "\tsnapper list-configs"
+msgstr "\tsnapper seadete loetelu"
 
 msgid "\tsnapper modify <number>"
 msgstr "\tsnapper muuda <number>"
@@ -191,6 +222,19 @@ msgstr "    Valikud 'delete' käsule:"
 msgid "    Options for 'diff' command:"
 msgstr "    Valikud 'diff' käsule:"
 
+#, fuzzy
+msgid "    Options for 'get-config' command:"
+msgstr "    Valikud 'create-config' käsule:"
+
+msgid "    Options for 'list' command:"
+msgstr "    Valikud 'list käsule:"
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr "    Valikud 'modify' käsule:"
 
@@ -224,6 +268,15 @@ msgstr "  Kustuta seaded:"
 msgid "  Delete snapshot:"
 msgstr "  Kustuta hetkekoopia:"
 
+msgid "  Get config:"
+msgstr "  Lae seaded::"
+
+msgid "  List configs:"
+msgstr "  Seadete loetelu:"
+
+msgid "  List snapshots:"
+msgstr "  Hetkekoopiate loetelu:"
+
 msgid "  Modify snapshot:"
 msgstr "  Muuda hetketõmmist:"
 
@@ -245,6 +298,9 @@ msgstr "  Haagi tõmmis lahti:"
 msgid "  Undo changes:"
 msgstr "  Tühista muudatused:"
 
+msgid "#"
+msgstr "#"
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -265,6 +321,9 @@ msgstr "(Tõmmis %d.)"
 
 msgid "ACL error."
 msgstr "ACL viga."
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr ""
@@ -295,6 +354,9 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Cleanup"
+msgstr "Puhastamine"
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Käsk 'Puhastamine' vajab ühte argumenti."
 
@@ -316,8 +378,17 @@ msgstr "Käsk 'delete-config' ei kasuta argumente."
 msgid "Command 'diff' needs at least one argument."
 msgstr "Käsk 'diff' vajab vähemalt ühte argumenti."
 
+msgid "Command 'get-config' does not take arguments."
+msgstr "Käsk 'get-config' ei kasuta argumente."
+
 msgid "Command 'help' does not take arguments."
 msgstr "Käsk 'help' ei kaasa argumente."
+
+msgid "Command 'list' does not take arguments."
+msgstr "Käsk 'list' ei kasuta argumente."
+
+msgid "Command 'list-configs' does not take arguments."
+msgstr "Käsk 'list-configs' ei kasuta argumente."
 
 msgid "Command 'modify' needs at least one argument."
 msgstr "Käsk 'modify' vajab vähemalt ühte argumenti."
@@ -352,6 +423,9 @@ msgstr "Käsk 'undochange' vajab vähemalt ühte argumenti."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Käsk 'xadiff' vajab vähemalt ühte argumenti."
+
+msgid "Config"
+msgstr "Seadistus"
 
 #, c-format
 msgid "Config '%s' is invalid."
@@ -402,6 +476,12 @@ msgstr "Luukase muudetav hetktõmmis tõmmisest %d."
 msgid "Creating snapshot failed."
 msgstr "Hetktõmmise loomine nurjus."
 
+msgid "Date"
+msgstr "Kuupäev"
+
+msgid "Default"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Seadistuse kustutamine nurjus (%s)."
@@ -414,6 +494,9 @@ msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "Tõmmise kustutamine asukohast %s:"
 msgstr[1] "Tõmmiste kustutamine asukohast %s:"
+
+msgid "Description"
+msgstr "Kirjeldus"
 
 msgid "Detecting filesystem type failed."
 msgstr "Failisüsteemi tüübi tuvastamine ebaõnnestus."
@@ -509,6 +592,10 @@ msgstr "Illegaalne tõmmis."
 msgid "Invalid ambit '%s'."
 msgstr "Vigane tõmmis '%s'."
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "Vigane tõmmis '%s'."
+
 msgid "Invalid configdata."
 msgstr "Vigased seadistuse andmed."
 
@@ -546,6 +633,9 @@ msgstr "Vigane kasutaja."
 
 msgid "Invalid userdata."
 msgstr "Vigased kasutajaandmed."
+
+msgid "Key"
+msgstr "Võti"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -618,6 +708,18 @@ msgstr "PB"
 msgid "PiB"
 msgstr "PB"
 
+msgid "Post #"
+msgstr "Peale #"
+
+msgid "Post Date"
+msgstr "Pärast kuupäeva"
+
+msgid "Pre #"
+msgstr "Enne #"
+
+msgid "Pre Date"
+msgstr "Enne kuupäeva"
+
 # error box title
 #, c-format
 msgid "Quota error (%s)."
@@ -636,6 +738,9 @@ msgstr "Tõmmist '%u' ei leita."
 
 msgid "Snapshot is in use."
 msgstr "Tõmmis on kasutuses."
+
+msgid "Subvolume"
+msgstr "Alamosa"
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -661,6 +766,9 @@ msgstr "TiB"
 
 msgid "Try 'snapper --help' for more information."
 msgstr "Rohkema teabe samiseks proovi `snapper --help'."
+
+msgid "Type"
+msgstr "Tüüp"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -695,6 +803,15 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr "Kasutage täisarvu vahemikus %d kuni %d."
 
+msgid "Used Space"
+msgstr "Kasutatud ruum"
+
+msgid "User"
+msgstr "Kasutaja"
+
+msgid "Userdata"
+msgstr "Kasutajaandmed"
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr "Kasutajaandmed '%s' ei sisalda märki '='."
@@ -702,6 +819,9 @@ msgstr "Kasutajaandmed '%s' ei sisalda märki '='."
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr "Kasutajaandmetes '%s' on tühi võti."
+
+msgid "Value"
+msgstr "Väärtus"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -740,6 +860,9 @@ msgstr "B"
 msgid "modifying %s"
 msgstr "muutmine %s"
 
+msgid "no"
+msgstr ""
+
 msgid "nothing to do"
 msgstr "midagi pole teha"
 
@@ -750,98 +873,14 @@ msgstr "juur argumenti saab kasutada ainult koos no-dbus-ga."
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "kasutage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 
+msgid "yes"
+msgstr ""
+
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Tundmatu hetktõmmise tüüp."
 
-#~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-#~ msgstr "\t--all-configs, -a\t\tKõigi juurdepääsetavate konfiguratsioonide hetktõmmitse nimekiri."
-
-#~ msgid "\t--disable-used-space\t\tDisable showing used space."
-#~ msgstr "\t--disable-used-space\t\tEi näita kasutatud ruumi."
-
-#~ msgid "\t--type, -t <type>\t\tType of snapshots to list."
-#~ msgstr "\t--type, -t <type>\t\tNäidatavate hetketõmmiste tüüp."
-
-#~ msgid "\tsnapper get-config"
-#~ msgstr "\tsnapper get-config 'vali seaded'"
-
-#~ msgid "\tsnapper list"
-#~ msgstr "\tsnapper loetelu"
-
-#~ msgid "\tsnapper list-configs"
-#~ msgstr "\tsnapper seadete loetelu"
-
-#~ msgid "    Options for 'list' command:"
-#~ msgstr "    Valikud 'list käsule:"
-
-#~ msgid "  Get config:"
-#~ msgstr "  Lae seaded::"
-
-#~ msgid "  List configs:"
-#~ msgstr "  Seadete loetelu:"
-
-#~ msgid "  List snapshots:"
-#~ msgstr "  Hetkekoopiate loetelu:"
-
-#~ msgid "#"
-#~ msgstr "#"
-
-#~ msgid "Cleanup"
-#~ msgstr "Puhastamine"
-
-#~ msgid "Command 'get-config' does not take arguments."
-#~ msgstr "Käsk 'get-config' ei kasuta argumente."
-
-#~ msgid "Command 'list' does not take arguments."
-#~ msgstr "Käsk 'list' ei kasuta argumente."
-
-#~ msgid "Command 'list-configs' does not take arguments."
-#~ msgstr "Käsk 'list-configs' ei kasuta argumente."
-
-#~ msgid "Config"
-#~ msgstr "Seadistus"
-
-#~ msgid "Date"
-#~ msgstr "Kuupäev"
-
-#~ msgid "Description"
-#~ msgstr "Kirjeldus"
-
-#~ msgid "Key"
-#~ msgstr "Võti"
-
-#~ msgid "Post #"
-#~ msgstr "Peale #"
-
-#~ msgid "Post Date"
-#~ msgstr "Pärast kuupäeva"
-
-#~ msgid "Pre #"
-#~ msgstr "Enne #"
-
-#~ msgid "Pre Date"
-#~ msgstr "Enne kuupäeva"
-
-#~ msgid "Subvolume"
-#~ msgstr "Alamosa"
-
-#~ msgid "Type"
-#~ msgstr "Tüüp"
-
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "Tundmatu hetktõmmiste tüüp."
-
-#~ msgid "Used Space"
-#~ msgstr "Kasutatud ruum"
-
-#~ msgid "User"
-#~ msgstr "Kasutaja"
-
-#~ msgid "Userdata"
-#~ msgstr "Kasutajaandmed"
-
-#~ msgid "Value"
-#~ msgstr "Väärtus"
 
 #, fuzzy
 #~ msgid "Quota failure (%s)."
