--- a/po/it.po
+++ b/po/it.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2020-08-24 16:13+0000\n"
 "Last-Translator: Paolo Za <zapaolo@email.it>\n"
 "Language-Team: Italian <https://l10n.opensuse.org/projects/snapper/master/it/>\n"
@@ -14,6 +14,9 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.6.1\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr "\t--all-configs, -a\t\tElenca gli shapshot da tutte le configurazioni accessibili."
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr "\t--ambit, -a ambit\t\tOpera nell'ambito specificato."
 
@@ -22,6 +25,19 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tAlgoritmo di pulitura per l'istantanea
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tAlgoritmo di pulitura per le istantanee."
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
+msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <comando>\t\tLancia il comando e crea istantanee pre e post."
@@ -40,6 +56,9 @@ msgstr "\t--description, -d <descrizione>\tDescrizione delle istantanee."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <comando>\t\tComando utilizzato per confrontare i file."
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--disable-used-space\t\tDisabilita la visualizzazione dello spazio utilizzato."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <opzioni>\tOpzioni supplementari trasmesse al comando diff."
@@ -113,6 +132,9 @@ msgstr "\t--template, -t <nome>\t\tNome del modello di configurazione da usare."
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr "\t--type, -t <tipo>\t\tTipo per l'istantanea."
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr "\t--type, -t <tipo>\t\tTipo di istantanee da elencare."
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr "\t--userdata, -u <datiutente>\tDati utente per l'istantanea."
 
@@ -145,6 +167,15 @@ msgstr "\tsnapper delete-config"
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
 msgstr "\tsnapper diff <numero1>..<numero2> [vari file]"
+
+msgid "\tsnapper get-config"
+msgstr "\tsnapper get-config"
+
+msgid "\tsnapper list"
+msgstr "\tsnapper list"
+
+msgid "\tsnapper list-configs"
+msgstr "\tsnapper list-configs"
 
 msgid "\tsnapper modify <number>"
 msgstr "\tsnapper modify <numero>"
@@ -192,6 +223,19 @@ msgstr "    Opzioni per il comando 'delete':"
 msgid "    Options for 'diff' command:"
 msgstr "    Opzioni per il comando 'diff':"
 
+#, fuzzy
+msgid "    Options for 'get-config' command:"
+msgstr "    Opzioni per il comando 'create-config':"
+
+msgid "    Options for 'list' command:"
+msgstr "    Opzioni per il comando 'list':"
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr "    Opzioni per il comando 'modify':"
 
@@ -225,6 +269,15 @@ msgstr "  Eliminazione configurazione:"
 msgid "  Delete snapshot:"
 msgstr "  Eliminazione istantanee:"
 
+msgid "  Get config:"
+msgstr "  Ottenimento configurazione:"
+
+msgid "  List configs:"
+msgstr "  Elenco configurazioni:"
+
+msgid "  List snapshots:"
+msgstr "  Elenco istantanee:"
+
 msgid "  Modify snapshot:"
 msgstr "  Modifica istantanee:"
 
@@ -245,6 +298,9 @@ msgstr "  Smontaggio istantanea:"
 
 msgid "  Undo changes:"
 msgstr "  Ripristina le modifiche:"
+
+msgid "#"
+msgstr "#"
 
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
@@ -267,6 +323,9 @@ msgstr "(Istantanea %d.)"
 # error box title
 msgid "ACL error."
 msgstr "Errore ACL."
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr "L'istantanea attiva è già la predefinita."
@@ -297,6 +356,9 @@ msgstr "Impossibile rilevare l'ambito perché il sotto-volume è sconosciuto."
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr "Impossibile effettuare il ripristino perché il sotto-volume predefinito è sconosciuto."
 
+msgid "Cleanup"
+msgstr "Pulitura"
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Il comando 'cleanup' richiede un argomento."
 
@@ -318,8 +380,17 @@ msgstr "Il comando 'delete-config' non richiede argomenti."
 msgid "Command 'diff' needs at least one argument."
 msgstr "Il comando 'diff' richiede almeno un argomento."
 
+msgid "Command 'get-config' does not take arguments."
+msgstr "Il comando 'get-config' non richiede argomenti."
+
 msgid "Command 'help' does not take arguments."
 msgstr "Il comando 'help' non richiede argomenti."
+
+msgid "Command 'list' does not take arguments."
+msgstr "Il comando 'list' non richiede argomenti."
+
+msgid "Command 'list-configs' does not take arguments."
+msgstr "Il comando 'list-configs' non richiede argomenti."
 
 msgid "Command 'modify' needs at least one argument."
 msgstr "Il comando 'modify' richiede almeno un argomento."
@@ -354,6 +425,9 @@ msgstr "Il comando 'undochange' richiede almeno un argomento."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Il comando 'xadiff' richiede almeno un argomento."
+
+msgid "Config"
+msgstr "Configurazione"
 
 #, c-format
 msgid "Config '%s' is invalid."
@@ -404,6 +478,12 @@ msgstr "Creazione di un'istantanea in lettura/scrittura dell'istantanea %d."
 msgid "Creating snapshot failed."
 msgstr "Creazione dell'istantanea fallita."
 
+msgid "Date"
+msgstr "Data"
+
+msgid "Default"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Eliminazione della configurazione fallita (%s)."
@@ -416,6 +496,9 @@ msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "Eliminazione dello snapshot da %s:"
 msgstr[1] "Eliminazione degli snapshot da %s:"
+
+msgid "Description"
+msgstr "Descrizione"
 
 msgid "Detecting filesystem type failed."
 msgstr "Rilevamento del tipo di file system fallito."
@@ -507,6 +590,10 @@ msgstr "Istantanea illegale."
 msgid "Invalid ambit '%s'."
 msgstr "Ambito '%s' non valido."
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "Ambito '%s' non valido."
+
 msgid "Invalid configdata."
 msgstr "Dati di configurazione non validi."
 
@@ -544,6 +631,9 @@ msgstr "Utente non valido."
 
 msgid "Invalid userdata."
 msgstr "Dati utente non validi."
+
+msgid "Key"
+msgstr "Chiave"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -616,6 +706,18 @@ msgstr "PiB"
 msgid "PiB"
 msgstr "PiB"
 
+msgid "Post #"
+msgstr "Post #"
+
+msgid "Post Date"
+msgstr "Post data"
+
+msgid "Pre #"
+msgstr "Pre #"
+
+msgid "Pre Date"
+msgstr "Pre data"
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Errore di quota (%s)."
@@ -633,6 +735,9 @@ msgstr "Istantanea '%u' non trovata."
 
 msgid "Snapshot is in use."
 msgstr "L'istantanea è in uso."
+
+msgid "Subvolume"
+msgstr "Sottovolume"
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -658,6 +763,9 @@ msgstr "TiB"
 
 msgid "Try 'snapper --help' for more information."
 msgstr "Per ulteriori informazioni, usare 'snapper --help'."
+
+msgid "Type"
+msgstr "Tipo"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -692,6 +800,15 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr "Usare un numero intero da %d a %d."
 
+msgid "Used Space"
+msgstr "Spazio utilizzato"
+
+msgid "User"
+msgstr "Utente"
+
+msgid "Userdata"
+msgstr "Dati utente"
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr "Il dato utente '%s' non contiene il simbolo '='."
@@ -699,6 +816,9 @@ msgstr "Il dato utente '%s' non contiene il simbolo '='."
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr "Il dato utente '%s' ha la chiave vuota."
+
+msgid "Value"
+msgstr "Valore"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -737,6 +857,9 @@ msgstr "B"
 msgid "modifying %s"
 msgstr "modifica di %s"
 
+msgid "no"
+msgstr ""
+
 msgid "nothing to do"
 msgstr "nessuna operazione da eseguire"
 
@@ -751,6 +874,9 @@ msgstr ""
 "Uso:\n"
 "\tsnapper [--opzioni-globali] <comando> [--opzioni-del-comando] [argomenti-del-comando]"
 
+msgid "yes"
+msgstr ""
+
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Tipo di istantanea sconosciuto."
 
@@ -758,95 +884,8 @@ msgstr ""
 #~ msgid "Use %s, %s or %s."
 #~ msgstr "Usare %s, %s o %s."
 
-#~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-#~ msgstr "\t--all-configs, -a\t\tElenca gli shapshot da tutte le configurazioni accessibili."
-
-#~ msgid "\t--disable-used-space\t\tDisable showing used space."
-#~ msgstr "\t--disable-used-space\t\tDisabilita la visualizzazione dello spazio utilizzato."
-
-#~ msgid "\t--type, -t <type>\t\tType of snapshots to list."
-#~ msgstr "\t--type, -t <tipo>\t\tTipo di istantanee da elencare."
-
-#~ msgid "\tsnapper get-config"
-#~ msgstr "\tsnapper get-config"
-
-#~ msgid "\tsnapper list"
-#~ msgstr "\tsnapper list"
-
-#~ msgid "\tsnapper list-configs"
-#~ msgstr "\tsnapper list-configs"
-
-#~ msgid "    Options for 'list' command:"
-#~ msgstr "    Opzioni per il comando 'list':"
-
-#~ msgid "  Get config:"
-#~ msgstr "  Ottenimento configurazione:"
-
-#~ msgid "  List configs:"
-#~ msgstr "  Elenco configurazioni:"
-
-#~ msgid "  List snapshots:"
-#~ msgstr "  Elenco istantanee:"
-
-#~ msgid "#"
-#~ msgstr "#"
-
-#~ msgid "Cleanup"
-#~ msgstr "Pulitura"
-
-#~ msgid "Command 'get-config' does not take arguments."
-#~ msgstr "Il comando 'get-config' non richiede argomenti."
-
-#~ msgid "Command 'list' does not take arguments."
-#~ msgstr "Il comando 'list' non richiede argomenti."
-
-#~ msgid "Command 'list-configs' does not take arguments."
-#~ msgstr "Il comando 'list-configs' non richiede argomenti."
-
-#~ msgid "Config"
-#~ msgstr "Configurazione"
-
-#~ msgid "Date"
-#~ msgstr "Data"
-
-#~ msgid "Description"
-#~ msgstr "Descrizione"
-
-#~ msgid "Key"
-#~ msgstr "Chiave"
-
-#~ msgid "Post #"
-#~ msgstr "Post #"
-
-#~ msgid "Post Date"
-#~ msgstr "Post data"
-
-#~ msgid "Pre #"
-#~ msgstr "Pre #"
-
-#~ msgid "Pre Date"
-#~ msgstr "Pre data"
-
-#~ msgid "Subvolume"
-#~ msgstr "Sottovolume"
-
-#~ msgid "Type"
-#~ msgstr "Tipo"
-
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "Tipo sconosciuto di istantanee."
-
-#~ msgid "Used Space"
-#~ msgstr "Spazio utilizzato"
-
-#~ msgid "User"
-#~ msgstr "Utente"
-
-#~ msgid "Userdata"
-#~ msgstr "Dati utente"
-
-#~ msgid "Value"
-#~ msgstr "Valore"
 
 #~ msgid "Quota failure (%s)."
 #~ msgstr "Avaria quota (%s)."
