--- a/po/ku.po
+++ b/po/ku.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: memory.ku.po\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2005-09-23 00:15+0200\n"
 "Last-Translator: Kurdish Team <i18n@suse.de>\n"
 "Language-Team: Kurdish Team <i18n@suse.de>\n"
@@ -15,6 +15,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr ""
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -22,6 +25,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -40,6 +56,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -114,6 +133,9 @@ msgstr ""
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr ""
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr ""
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr ""
 
@@ -145,6 +167,15 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
+msgstr ""
+
+msgid "\tsnapper get-config"
+msgstr ""
+
+msgid "\tsnapper list"
+msgstr ""
+
+msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -195,6 +226,18 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
+msgid "    Options for 'get-config' command:"
+msgstr ""
+
+msgid "    Options for 'list' command:"
+msgstr ""
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -229,6 +272,18 @@ msgstr "Pace Jê Bibe"
 msgid "  Delete snapshot:"
 msgstr ""
 
+#, fuzzy
+msgid "  Get config:"
+msgstr "Pace Jê Bibe"
+
+#, fuzzy
+msgid "  List configs:"
+msgstr "Pace Jê Bibe"
+
+#, fuzzy
+msgid "  List snapshots:"
+msgstr "Xala girêdanê"
+
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -253,6 +308,9 @@ msgstr ""
 msgid "  Undo changes:"
 msgstr "Guherîn:"
 
+msgid "#"
+msgstr ""
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -274,6 +332,9 @@ msgstr "Pakêta '%s' nehat dîtin."
 #, fuzzy
 msgid "ACL error."
 msgstr "Çewtiyên &Rojnivîsk"
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr ""
@@ -304,6 +365,10 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+#, fuzzy
+msgid "Cleanup"
+msgstr "Paqij Bike"
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr ""
 
@@ -325,7 +390,16 @@ msgstr ""
 msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
+msgid "Command 'get-config' does not take arguments."
+msgstr ""
+
 msgid "Command 'help' does not take arguments."
+msgstr ""
+
+msgid "Command 'list' does not take arguments."
+msgstr ""
+
+msgid "Command 'list-configs' does not take arguments."
 msgstr ""
 
 msgid "Command 'modify' needs at least one argument."
@@ -361,6 +435,10 @@ msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr ""
+
+#, fuzzy
+msgid "Config"
+msgstr "Veava Bike"
 
 #, fuzzy, c-format
 msgid "Config '%s' is invalid."
@@ -415,6 +493,12 @@ msgstr "Nivîsandina mîhengan têk çû"
 msgid "Creating snapshot failed."
 msgstr "Nivîsandina mîhengan têk çû"
 
+msgid "Date"
+msgstr "Dîrok"
+
+msgid "Default"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr ""
@@ -428,6 +512,9 @@ msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "Nivîsandina mîhengan têk çû"
 msgstr[1] "Nivîsandina mîhengan têk çû"
+
+msgid "Description"
+msgstr "Daxwiyanî"
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -520,6 +607,10 @@ msgstr "Vebijêrka nederbasdar: %1"
 msgid "Invalid ambit '%s'."
 msgstr "Vebijêrka nederbasdar: %1"
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "Vebijêrka nederbasdar: %1"
+
 msgid "Invalid configdata."
 msgstr ""
 
@@ -557,6 +648,9 @@ msgstr ""
 
 msgid "Invalid userdata."
 msgstr ""
+
+msgid "Key"
+msgstr "Mifte"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -627,6 +721,22 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+#, fuzzy
+msgid "Post #"
+msgstr "Dîroka Destpêkê"
+
+#, fuzzy
+msgid "Post Date"
+msgstr "Dîroka Destpêkê"
+
+#, fuzzy
+msgid "Pre #"
+msgstr "Roja Niha"
+
+#, fuzzy
+msgid "Pre Date"
+msgstr "Roja Niha"
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Çewtî"
@@ -645,6 +755,10 @@ msgstr "Pakêta '%s' nehat dîtin."
 #, fuzzy
 msgid "Snapshot is in use."
 msgstr "Pakêta '%s' nehat dîtin."
+
+#, fuzzy
+msgid "Subvolume"
+msgstr "&Deng"
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -669,6 +783,9 @@ msgstr ""
 
 msgid "Try 'snapper --help' for more information."
 msgstr ""
+
+msgid "Type"
+msgstr "Cure"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -704,6 +821,16 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+msgid "User"
+msgstr "Bikarhêner"
+
+#, fuzzy
+msgid "Userdata"
+msgstr "Bikarhêner"
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
@@ -711,6 +838,9 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+msgid "Value"
+msgstr "Nirx"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -748,6 +878,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr "%1$s tê rakirin"
 
+msgid "no"
+msgstr ""
+
 #, fuzzy
 msgid "nothing to do"
 msgstr "Tiştekî bê te kirin nîn e."
@@ -758,51 +891,8 @@ msgstr ""
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
 
-#, fuzzy
-#~ msgid "  Get config:"
-#~ msgstr "Pace Jê Bibe"
-
-#, fuzzy
-#~ msgid "Cleanup"
-#~ msgstr "Paqij Bike"
-
-#, fuzzy
-#~ msgid "Config"
-#~ msgstr "Veava Bike"
-
-#~ msgid "Date"
-#~ msgstr "Dîrok"
-
-#~ msgid "Description"
-#~ msgstr "Daxwiyanî"
-
-#~ msgid "Key"
-#~ msgstr "Mifte"
-
-#, fuzzy
-#~ msgid "Post Date"
-#~ msgstr "Dîroka Destpêkê"
-
-#, fuzzy
-#~ msgid "Pre Date"
-#~ msgstr "Roja Niha"
-
-#, fuzzy
-#~ msgid "Subvolume"
-#~ msgstr "&Deng"
-
-#~ msgid "Type"
-#~ msgstr "Cure"
-
-#~ msgid "User"
-#~ msgstr "Bikarhêner"
-
-#, fuzzy
-#~ msgid "Userdata"
-#~ msgstr "Bikarhêner"
-
-#~ msgid "Value"
-#~ msgstr "Nirx"
+msgid "yes"
+msgstr ""
 
 #, fuzzy
 #~ msgid "Quota failure (%s)."
