--- a/po/pl.po
+++ b/po/pl.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2019-03-01 20:28+0000\n"
 "Last-Translator: Ewelina Michalowska <ewelina.michalowska@stgambit.com>\n"
 "Language-Team: Polish <https://l10n.opensuse.org/projects/snapper/master/pl/>\n"
@@ -20,6 +20,9 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 3.3\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr "\t--all-configs, -a\t\tWyświetla listę migawek z wszystkich dostępnych konfiguracji."
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -28,6 +31,19 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tAlgorytm usuwania starych zrzutów."
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tAlgorytm czyszczenia migawek."
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
+msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <polecenie>\t\tWykonanie polecenia oraz utworzenie zrzutów typu pre i post."
@@ -46,6 +62,9 @@ msgstr "\t--description, -d <opis>\tOpis migawek."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <polecenie>\t\tPolecenie służące do porównywania plików."
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--disable-used-space\t\tWyłącz wyświetlanie wykorzystanego miejsca."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <opcje>\tDodatkowe opcje przekazywane do polecenia diff."
@@ -119,6 +138,9 @@ msgstr "\t--template, -t <name>\t\tNazwa szablonu konfiguracji do użycia."
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr "\t--type, -t <type>\t\tRodzaj zrzutu."
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr "\t--type, -t <type>\t\tRodzaj zrzutów do wyświetlenia."
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr "\t--userdata, -u <userdata>\tDane użytkownika dla zrzutu."
 
@@ -151,6 +173,15 @@ msgstr "\tsnapper delete-config"
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
 msgstr "\tsnapper diff <numer1>..<numer2> [pliki]"
+
+msgid "\tsnapper get-config"
+msgstr "\tsnapper get-config"
+
+msgid "\tsnapper list"
+msgstr "\tsnapper list"
+
+msgid "\tsnapper list-configs"
+msgstr "\tsnapper list-configs"
 
 msgid "\tsnapper modify <number>"
 msgstr "\tsnapper modify <numer>"
@@ -198,6 +229,19 @@ msgstr "    Opcje polecenia \"delete\":"
 msgid "    Options for 'diff' command:"
 msgstr "    Opcje polecenia \"diff\":"
 
+#, fuzzy
+msgid "    Options for 'get-config' command:"
+msgstr "    Opcje dla polecenia 'create-config':"
+
+msgid "    Options for 'list' command:"
+msgstr "    Opcje dla polecenia 'list':"
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr "    Opcje dla polecenia 'modify':"
 
@@ -231,6 +275,15 @@ msgstr "  Usuwanie konfiguracji:"
 msgid "  Delete snapshot:"
 msgstr "  Usunięcie zrzutu:"
 
+msgid "  Get config:"
+msgstr "  Pobieranie konfiguracji:"
+
+msgid "  List configs:"
+msgstr "  Lista konfiguracji:"
+
+msgid "  List snapshots:"
+msgstr "  Lista zrzutów:"
+
 msgid "  Modify snapshot:"
 msgstr "  Modyfikacja zrzutu:"
 
@@ -252,6 +305,9 @@ msgstr "  Odmontowanie zrzutu:"
 msgid "  Undo changes:"
 msgstr "  Cofanie zmian:"
 
+msgid "#"
+msgstr "#"
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -272,6 +328,9 @@ msgstr "(Migawka %d.)"
 
 msgid "ACL error."
 msgstr "Błąd ACL."
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr ""
@@ -302,6 +361,9 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Cleanup"
+msgstr "Wyczyszczono"
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Polecenie  'cleanup' wymaga jednego argumentu."
 
@@ -323,8 +385,17 @@ msgstr "Polecenie 'delete-config' nie przyjmuje argumentów."
 msgid "Command 'diff' needs at least one argument."
 msgstr "Polecenie 'diff' wymaga podania co najmniej jednego argumentu."
 
+msgid "Command 'get-config' does not take arguments."
+msgstr "Polecenie 'get-config' nie przyjmuje argumentów."
+
 msgid "Command 'help' does not take arguments."
 msgstr "Polecenie 'help' nie przyjmuje argumentów."
+
+msgid "Command 'list' does not take arguments."
+msgstr "Polecenie 'list' nie przyjmuje argumentów."
+
+msgid "Command 'list-configs' does not take arguments."
+msgstr "Polecenie 'list-configs' nie przyjmuje argumentów."
 
 msgid "Command 'modify' needs at least one argument."
 msgstr "Polecenie 'modify' wymaga co najmniej jednego argumentu."
@@ -359,6 +430,9 @@ msgstr "Polecenie 'undochange' wymaga co najmniej jednego argumentu."
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "Polecenie 'xadiff' wymaga podania co najmniej jednego argumentu."
+
+msgid "Config"
+msgstr "Konfiguracja"
 
 #, c-format
 msgid "Config '%s' is invalid."
@@ -409,6 +483,12 @@ msgstr "Tworzenie migawki z migawki %d służącej do odczytu i zapisu."
 msgid "Creating snapshot failed."
 msgstr "Tworzenie zrzutu nie powiodło się (%s)."
 
+msgid "Date"
+msgstr "Data"
+
+msgid "Default"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Usuwanie konfiguracji nie powiodło się (%s)."
@@ -422,6 +502,9 @@ msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "Usuwanie migawki z %s:"
 msgstr[1] "Usuwanie migawek z %s:"
 msgstr[2] "Usuwanie migawek z %s:"
+
+msgid "Description"
+msgstr "Opis"
 
 msgid "Detecting filesystem type failed."
 msgstr "Wykrywanie systemu plików nie powiodło się."
@@ -513,6 +596,10 @@ msgstr "Niedozwolony zrzut."
 msgid "Invalid ambit '%s'."
 msgstr "Nieprawidłowy zrzut '%s'."
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "Nieprawidłowy zrzut '%s'."
+
 msgid "Invalid configdata."
 msgstr "Nieprawidłowe dane konfiguracyjne."
 
@@ -550,6 +637,9 @@ msgstr "Nieprawidłowy użytkownik."
 
 msgid "Invalid userdata."
 msgstr "Nieprawidłowe dane użytkownika."
+
+msgid "Key"
+msgstr "Klucz"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -622,6 +712,18 @@ msgstr "PiB"
 msgid "PiB"
 msgstr "PiB"
 
+msgid "Post #"
+msgstr "Post #"
+
+msgid "Post Date"
+msgstr "Po dacie"
+
+msgid "Pre #"
+msgstr "Pre #"
+
+msgid "Pre Date"
+msgstr "Przed datą"
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Błąd przydziału (%s)."
@@ -639,6 +741,9 @@ msgstr "Nie znaleziono zrzutu '%u'."
 
 msgid "Snapshot is in use."
 msgstr "Dany zrzut jest już używany."
+
+msgid "Subvolume"
+msgstr "Podwolumen"
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -664,6 +769,9 @@ msgstr "TiB"
 
 msgid "Try 'snapper --help' for more information."
 msgstr "Wypróbuj polecenie 'snapper --help', aby uzyskać więcej informacji."
+
+msgid "Type"
+msgstr "Rodzaj"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -698,6 +806,15 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr "Użyj liczby całkowitej z zakresu od %d do %d."
 
+msgid "Used Space"
+msgstr "Wykorzystane miejsce"
+
+msgid "User"
+msgstr "Użytkownik"
+
+msgid "Userdata"
+msgstr "Dane użytkownika"
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr "Dane użytkownika %s nie zawierają znaku =."
@@ -705,6 +822,9 @@ msgstr "Dane użytkownika %s nie zawierają znaku =."
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr "Dane użytkownika %s zawierają pusty klucz."
+
+msgid "Value"
+msgstr "Wartość"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -743,6 +863,9 @@ msgstr "B"
 msgid "modifying %s"
 msgstr "modyfikowanie %s"
 
+msgid "no"
+msgstr ""
+
 msgid "nothing to do"
 msgstr "nie ma nic do zrobienia"
 
@@ -753,98 +876,14 @@ msgstr "argumentu root można użyć tylko razem z parametrem no-dbus."
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "Użycie: snapper [--opcje-globalne] <polecenia> [--opcje-poleceń] [argumenty-polecenia]"
 
+msgid "yes"
+msgstr ""
+
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Nieznany rodzaj zrzutu."
 
-#~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-#~ msgstr "\t--all-configs, -a\t\tWyświetla listę migawek z wszystkich dostępnych konfiguracji."
-
-#~ msgid "\t--disable-used-space\t\tDisable showing used space."
-#~ msgstr "\t--disable-used-space\t\tWyłącz wyświetlanie wykorzystanego miejsca."
-
-#~ msgid "\t--type, -t <type>\t\tType of snapshots to list."
-#~ msgstr "\t--type, -t <type>\t\tRodzaj zrzutów do wyświetlenia."
-
-#~ msgid "\tsnapper get-config"
-#~ msgstr "\tsnapper get-config"
-
-#~ msgid "\tsnapper list"
-#~ msgstr "\tsnapper list"
-
-#~ msgid "\tsnapper list-configs"
-#~ msgstr "\tsnapper list-configs"
-
-#~ msgid "    Options for 'list' command:"
-#~ msgstr "    Opcje dla polecenia 'list':"
-
-#~ msgid "  Get config:"
-#~ msgstr "  Pobieranie konfiguracji:"
-
-#~ msgid "  List configs:"
-#~ msgstr "  Lista konfiguracji:"
-
-#~ msgid "  List snapshots:"
-#~ msgstr "  Lista zrzutów:"
-
-#~ msgid "#"
-#~ msgstr "#"
-
-#~ msgid "Cleanup"
-#~ msgstr "Wyczyszczono"
-
-#~ msgid "Command 'get-config' does not take arguments."
-#~ msgstr "Polecenie 'get-config' nie przyjmuje argumentów."
-
-#~ msgid "Command 'list' does not take arguments."
-#~ msgstr "Polecenie 'list' nie przyjmuje argumentów."
-
-#~ msgid "Command 'list-configs' does not take arguments."
-#~ msgstr "Polecenie 'list-configs' nie przyjmuje argumentów."
-
-#~ msgid "Config"
-#~ msgstr "Konfiguracja"
-
-#~ msgid "Date"
-#~ msgstr "Data"
-
-#~ msgid "Description"
-#~ msgstr "Opis"
-
-#~ msgid "Key"
-#~ msgstr "Klucz"
-
-#~ msgid "Post #"
-#~ msgstr "Post #"
-
-#~ msgid "Post Date"
-#~ msgstr "Po dacie"
-
-#~ msgid "Pre #"
-#~ msgstr "Pre #"
-
-#~ msgid "Pre Date"
-#~ msgstr "Przed datą"
-
-#~ msgid "Subvolume"
-#~ msgstr "Podwolumen"
-
-#~ msgid "Type"
-#~ msgstr "Rodzaj"
-
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "Nieznany rodzaj zrzutów."
-
-#~ msgid "Used Space"
-#~ msgstr "Wykorzystane miejsce"
-
-#~ msgid "User"
-#~ msgstr "Użytkownik"
-
-#~ msgid "Userdata"
-#~ msgstr "Dane użytkownika"
-
-#~ msgid "Value"
-#~ msgstr "Wartość"
 
 #~ msgid "Quota failure (%s)."
 #~ msgstr "Niepowodzenie przydziału (%s)."
