--- a/po/sl.po
+++ b/po/sl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2005-08-24 17:37+0200\n"
 "Last-Translator: Janez Krek <janez.krek@euroteh.si>\n"
 "Language-Team: Slovenščina <sl@li.org>\n"
@@ -19,6 +19,9 @@ msgstr ""
 "X-Generator: KBabel 1.3.1\n"
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr ""
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -26,6 +29,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -44,6 +60,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -118,6 +137,9 @@ msgstr ""
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr ""
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr ""
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr ""
 
@@ -149,6 +171,15 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
+msgstr ""
+
+msgid "\tsnapper get-config"
+msgstr ""
+
+msgid "\tsnapper list"
+msgstr ""
+
+msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -196,6 +227,18 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
+msgid "    Options for 'get-config' command:"
+msgstr ""
+
+msgid "    Options for 'list' command:"
+msgstr ""
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -229,6 +272,15 @@ msgstr ""
 msgid "  Delete snapshot:"
 msgstr ""
 
+msgid "  Get config:"
+msgstr ""
+
+msgid "  List configs:"
+msgstr ""
+
+msgid "  List snapshots:"
+msgstr ""
+
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -249,6 +301,9 @@ msgid "  Umount snapshot:"
 msgstr ""
 
 msgid "  Undo changes:"
+msgstr ""
+
+msgid "#"
 msgstr ""
 
 #. TRANSLATORS: used to construct list of values
@@ -273,6 +328,9 @@ msgstr "Gostitelja %s ni."
 #, fuzzy
 msgid "ACL error."
 msgstr "V/I napaka"
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr ""
@@ -304,6 +362,9 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Cleanup"
+msgstr ""
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr ""
 
@@ -325,7 +386,16 @@ msgstr ""
 msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
+msgid "Command 'get-config' does not take arguments."
+msgstr ""
+
 msgid "Command 'help' does not take arguments."
+msgstr ""
+
+msgid "Command 'list' does not take arguments."
+msgstr ""
+
+msgid "Command 'list-configs' does not take arguments."
 msgstr ""
 
 msgid "Command 'modify' needs at least one argument."
@@ -361,6 +431,10 @@ msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr ""
+
+#, fuzzy
+msgid "Config"
+msgstr "Konflikti"
 
 #, fuzzy, c-format
 msgid "Config '%s' is invalid."
@@ -413,6 +487,13 @@ msgstr ""
 msgid "Creating snapshot failed."
 msgstr ""
 
+#, fuzzy
+msgid "Date"
+msgstr "Po zagonu"
+
+msgid "Default"
+msgstr ""
+
 # %s is either BOOTP or DHCP
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
@@ -431,6 +512,9 @@ msgstr[0] "Prilagoditev %s ni bila uspešna."
 msgstr[1] "Prilagoditev %s ni bila uspešna."
 msgstr[2] "Prilagoditev %s ni bila uspešna."
 msgstr[3] "Prilagoditev %s ni bila uspešna."
+
+msgid "Description"
+msgstr "Opis"
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -527,6 +611,10 @@ msgstr "Prilagoditev %s ni bila uspešna."
 msgid "Invalid ambit '%s'."
 msgstr "Napačen vnos."
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "Napačen vnos."
+
 #, fuzzy
 msgid "Invalid configdata."
 msgstr "Napačen vnos."
@@ -566,6 +654,11 @@ msgstr "Napačen vnos."
 
 msgid "Invalid userdata."
 msgstr ""
+
+# KE
+#, fuzzy
+msgid "Key"
+msgstr "Kenija"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -636,6 +729,21 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+#, fuzzy
+msgid "Post #"
+msgstr "Po zagonu"
+
+#, fuzzy
+msgid "Post Date"
+msgstr "Po zagonu"
+
+msgid "Pre #"
+msgstr ""
+
+#, fuzzy
+msgid "Pre Date"
+msgstr "Po zagonu"
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -656,6 +764,9 @@ msgstr "Gostitelja %s ni."
 #, fuzzy
 msgid "Snapshot is in use."
 msgstr "Gostitelja %s ni."
+
+msgid "Subvolume"
+msgstr ""
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -681,6 +792,9 @@ msgstr ""
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
 msgstr "Pridobivanje podatkov o pomnilniku.."
+
+msgid "Type"
+msgstr "Tip"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -716,6 +830,15 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+msgid "User"
+msgstr ""
+
+msgid "Userdata"
+msgstr ""
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
@@ -723,6 +846,9 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+msgid "Value"
+msgstr "Vrednost"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -760,6 +886,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr ""
 
+msgid "no"
+msgstr ""
+
 msgid "nothing to do"
 msgstr ""
 
@@ -770,27 +899,8 @@ msgstr "Pridobivanje podatkov o pomnilniku.."
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
 
-#, fuzzy
-#~ msgid "Config"
-#~ msgstr "Konflikti"
-
-#~ msgid "Description"
-#~ msgstr "Opis"
-
-# KE
-#, fuzzy
-#~ msgid "Key"
-#~ msgstr "Kenija"
-
-#, fuzzy
-#~ msgid "Post Date"
-#~ msgstr "Po zagonu"
-
-#~ msgid "Type"
-#~ msgstr "Tip"
-
-#~ msgid "Value"
-#~ msgstr "Vrednost"
+msgid "yes"
+msgstr ""
 
 #, fuzzy
 #~ msgid "Unknown file."
