--- a/po/th.po
+++ b/po/th.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2008-01-04 08:58+0100\n"
 "Last-Translator: i18n@suse.de\n"
 "Language-Team: Thai <i18n@suse.de>\n"
@@ -15,6 +15,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr ""
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -22,6 +25,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -40,6 +56,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -114,6 +133,9 @@ msgstr ""
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr ""
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr ""
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr ""
 
@@ -146,6 +168,16 @@ msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
 msgstr ""
+
+msgid "\tsnapper get-config"
+msgstr ""
+
+msgid "\tsnapper list"
+msgstr ""
+
+#, fuzzy
+msgid "\tsnapper list-configs"
+msgstr "แสดงรายการที่ปรับแต่งไว้แล้ว"
 
 msgid "\tsnapper modify <number>"
 msgstr ""
@@ -197,6 +229,20 @@ msgstr "ตัวเลือกต่อท้ายบรรทัดคำส
 msgid "    Options for 'diff' command:"
 msgstr "ตัวเลือกต่อท้ายบรรทัดคำสั่งเพื่อส่งไปให้เคอร์เนล"
 
+#, fuzzy
+msgid "    Options for 'get-config' command:"
+msgstr "ตัวเลือกต่อท้ายบรรทัดคำสั่งเพื่อส่งไปให้เคอร์เนล"
+
+#, fuzzy
+msgid "    Options for 'list' command:"
+msgstr "ตัวเลือกต่อท้ายบรรทัดคำสั่งเพื่อส่งไปให้เคอร์เนล"
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -236,6 +282,18 @@ msgstr "การปรับแต่งตัวสร้างซีดี"
 msgid "  Delete snapshot:"
 msgstr ""
 
+#, fuzzy
+msgid "  Get config:"
+msgstr "การปรับแต่งตัวสร้างซีดี"
+
+#, fuzzy
+msgid "  List configs:"
+msgstr "แสดงรายการที่ปรับแต่งไว้แล้ว"
+
+#, fuzzy
+msgid "  List snapshots:"
+msgstr "ไม่ต้องสร้างการสำรองข้อมูล"
+
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -260,6 +318,9 @@ msgstr "ไม่ต้องสร้างการสำรองข้อม
 msgid "  Undo changes:"
 msgstr ""
 
+msgid "#"
+msgstr ""
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -281,6 +342,9 @@ msgstr "ไม่พบรายการบูตระบบ %1"
 #, fuzzy
 msgid "ACL error."
 msgstr "ผิดพลาด"
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr ""
@@ -311,6 +375,10 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+#, fuzzy
+msgid "Cleanup"
+msgstr "ล้างค่า"
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr ""
 
@@ -332,7 +400,16 @@ msgstr ""
 msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
+msgid "Command 'get-config' does not take arguments."
+msgstr ""
+
 msgid "Command 'help' does not take arguments."
+msgstr ""
+
+msgid "Command 'list' does not take arguments."
+msgstr ""
+
+msgid "Command 'list-configs' does not take arguments."
 msgstr ""
 
 msgid "Command 'modify' needs at least one argument."
@@ -368,6 +445,10 @@ msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
 msgstr ""
+
+#, fuzzy
+msgid "Config"
+msgstr "ปรับแต่ง"
 
 #, fuzzy, c-format
 msgid "Config '%s' is invalid."
@@ -422,6 +503,13 @@ msgstr "การสร้างระบบแฟ้มล้มเหลว"
 msgid "Creating snapshot failed."
 msgstr "การสร้างระบบแฟ้มล้มเหลว"
 
+#, fuzzy
+msgid "Date"
+msgstr "วันที่ปัจจุบัน"
+
+msgid "Default"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "การสร้างระบบแฟ้มล้มเหลว"
@@ -434,6 +522,9 @@ msgstr "การสร้างระบบแฟ้มล้มเหลว"
 msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "การสร้างระบบแฟ้มล้มเหลว"
+
+msgid "Description"
+msgstr "ข้อมูลอธิบาย"
 
 #, fuzzy
 msgid "Detecting filesystem type failed."
@@ -528,6 +619,10 @@ msgstr "ไดเรกทอรีปลายทาง (%1) ใช้งาน
 msgid "Invalid ambit '%s'."
 msgstr "ไดเรกทอรีปลายทาง (%1) ใช้งานไม่ได้"
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "ไดเรกทอรีปลายทาง (%1) ใช้งานไม่ได้"
+
 #, fuzzy
 msgid "Invalid configdata."
 msgstr "ไดเรกทอรีปลายทาง (%1) ใช้งานไม่ได้"
@@ -568,6 +663,9 @@ msgstr "ไดเรกทอรีปลายทาง (%1) ใช้งาน
 #, fuzzy
 msgid "Invalid userdata."
 msgstr "ไดเรกทอรีปลายทาง (%1) ใช้งานไม่ได้"
+
+msgid "Key"
+msgstr "คีย์"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -639,6 +737,22 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+#, fuzzy
+msgid "Post #"
+msgstr "เครื่อง %1"
+
+#, fuzzy
+msgid "Post Date"
+msgstr "วันที่ปัจจุบัน"
+
+#, fuzzy
+msgid "Pre #"
+msgstr "วันที่ปัจจุบัน"
+
+#, fuzzy
+msgid "Pre Date"
+msgstr "วันที่ปัจจุบัน"
+
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "ผิดพลาด"
@@ -658,6 +772,10 @@ msgstr "ไม่พบรายการบูตระบบ %1"
 #, fuzzy
 msgid "Snapshot is in use."
 msgstr "ไม่พบรายการบูตระบบ %1"
+
+#, fuzzy
+msgid "Subvolume"
+msgstr "จัดเก็บระดับเสียง"
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -683,6 +801,9 @@ msgstr ""
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
 msgstr "กำลังหาข้อมูลของหน่วยความจำ..."
+
+msgid "Type"
+msgstr "ประเภท"
 
 #, fuzzy, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -718,6 +839,16 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+msgid "User"
+msgstr "ผู้ใช้"
+
+#, fuzzy
+msgid "Userdata"
+msgstr "ผู้ใช้"
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
@@ -725,6 +856,9 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+msgid "Value"
+msgstr "ค่า"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -762,6 +896,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr "กำลังเอา %1$s ออก"
 
+msgid "no"
+msgstr ""
+
 #, fuzzy
 msgid "nothing to do"
 msgstr "ไม่มีอะไรต้องทำ"
@@ -773,60 +910,16 @@ msgstr "กำลังหาข้อมูลของหน่วยควา
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
 
+msgid "yes"
+msgstr ""
+
 #, fuzzy
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "ไม่รู้จักชนิด"
 
 #, fuzzy
-#~ msgid "    Options for 'list' command:"
-#~ msgstr "ตัวเลือกต่อท้ายบรรทัดคำสั่งเพื่อส่งไปให้เคอร์เนล"
-
-#, fuzzy
-#~ msgid "  Get config:"
-#~ msgstr "การปรับแต่งตัวสร้างซีดี"
-
-#, fuzzy
-#~ msgid "  List configs:"
-#~ msgstr "แสดงรายการที่ปรับแต่งไว้แล้ว"
-
-#, fuzzy
-#~ msgid "Cleanup"
-#~ msgstr "ล้างค่า"
-
-#, fuzzy
-#~ msgid "Config"
-#~ msgstr "ปรับแต่ง"
-
-#~ msgid "Description"
-#~ msgstr "ข้อมูลอธิบาย"
-
-#~ msgid "Key"
-#~ msgstr "คีย์"
-
-#, fuzzy
-#~ msgid "Post #"
-#~ msgstr "เครื่อง %1"
-
-#, fuzzy
-#~ msgid "Pre Date"
-#~ msgstr "วันที่ปัจจุบัน"
-
-#, fuzzy
-#~ msgid "Subvolume"
-#~ msgstr "จัดเก็บระดับเสียง"
-
-#~ msgid "Type"
-#~ msgstr "ประเภท"
-
-#, fuzzy
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "ไม่รู้จักชนิด"
-
-#~ msgid "User"
-#~ msgstr "ผู้ใช้"
-
-#~ msgid "Value"
-#~ msgstr "ค่า"
 
 #, fuzzy
 #~ msgid "Quota failure (%s)."
