--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2020-02-17 12:54+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
 "Language-Team: Chinese (Taiwan) <https://l10n.opensuse.org/projects/snapper/master/zh_TW/>\n"
@@ -19,6 +19,9 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Weblate 3.6.1\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr "\t--all-configs, -a\t\t列出所有可存取組態中的快照。"
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -28,6 +31,19 @@ msgstr "\t--cleanup-algorithm, -c <algo>\t清理快照的演算法。"
 # SLE12
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm、-c <演算法>\t清理快照的演算法。"
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
+msgstr ""
 
 # SLE12
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -48,6 +64,9 @@ msgstr "\t--description、-d <描述>\t快照的描述。"
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <指令>\t\t用於比較檔案的指令。"
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--disable-used-space\t\t停用顯示已用空間的功能。"
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <選項>\t傳送到 diff 指令的額外選項。"
@@ -124,6 +143,9 @@ msgstr "\t--template, -t <名稱>\t\t要使用的設定樣本的名稱。"
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr "\t--type, -t <類型>\t\t快照的類型。"
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr "\t--type, -t <類型>\t\t要列出的快照類型。"
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr "\t--userdata, -u <userdata>\t快照的使用者資料。"
 
@@ -161,6 +183,18 @@ msgstr "\tsnapper delete-config"
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
 msgstr "\tsnapper diff <數字1>..<數字2> [檔案]"
+
+# SLE12
+msgid "\tsnapper get-config"
+msgstr "\tsnapper get-config"
+
+# SLE12
+msgid "\tsnapper list"
+msgstr "\tsnapper list"
+
+# SLE12
+msgid "\tsnapper list-configs"
+msgstr "\tsnapper list-configs"
 
 msgid "\tsnapper modify <number>"
 msgstr "\tsnapper modify <數字>"
@@ -212,6 +246,19 @@ msgstr "    用於「delete」指令的選項︰"
 msgid "    Options for 'diff' command:"
 msgstr "    用於「diff」指令的選項︰"
 
+#, fuzzy
+msgid "    Options for 'get-config' command:"
+msgstr "    'create-config' 命令的選項："
+
+msgid "    Options for 'list' command:"
+msgstr "    'list' 命令的選項："
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr "    'modify' 命令的選項："
 
@@ -247,6 +294,16 @@ msgstr "  刪除設定："
 msgid "  Delete snapshot:"
 msgstr "  刪除快照："
 
+# SLE12
+msgid "  Get config:"
+msgstr "  取得組態︰"
+
+msgid "  List configs:"
+msgstr "  列出設定："
+
+msgid "  List snapshots:"
+msgstr "  列出快照："
+
 msgid "  Modify snapshot:"
 msgstr "  修改快照："
 
@@ -270,6 +327,10 @@ msgstr "  卸載快照："
 msgid "  Undo changes:"
 msgstr "  回復變更："
 
+# SLE12
+msgid "#"
+msgstr "編號＼"
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -292,6 +353,9 @@ msgstr "(快照 %d。)"
 # SLE12
 msgid "ACL error."
 msgstr "ACL 錯誤。"
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr ""
@@ -322,6 +386,9 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Cleanup"
+msgstr "清理"
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "命令 'cleanup' 需要一個參數。"
 
@@ -345,8 +412,18 @@ msgstr "命令 'delete-config' 不需參數。"
 msgid "Command 'diff' needs at least one argument."
 msgstr "指令「diff」需要至少一個引數。"
 
+# SLE12
+msgid "Command 'get-config' does not take arguments."
+msgstr "指令「get-config」未收到引數。"
+
 msgid "Command 'help' does not take arguments."
 msgstr "命令 'help' 不需參數。"
+
+msgid "Command 'list' does not take arguments."
+msgstr "命令 'list' 不需參數。"
+
+msgid "Command 'list-configs' does not take arguments."
+msgstr "命令 'list-configs' 不需參數。"
 
 msgid "Command 'modify' needs at least one argument."
 msgstr "命令 'moodify' 需要至少一個參數。"
@@ -386,6 +463,9 @@ msgstr "命令 'undochange' 需要至少一個參數。"
 # SLE12
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "指令「xadiff」至少需要一個引數。"
+
+msgid "Config"
+msgstr "設定"
 
 #, c-format
 msgid "Config '%s' is invalid."
@@ -446,6 +526,12 @@ msgstr "正在建立快照 %d 的讀寫快照。"
 msgid "Creating snapshot failed."
 msgstr "建立快照失敗。"
 
+msgid "Date"
+msgstr "日期"
+
+msgid "Default"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr "刪除設定失敗 (%s)。"
@@ -458,6 +544,9 @@ msgstr "刪除快照失敗。"
 msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "從 %s 刪除快照︰"
+
+msgid "Description"
+msgstr "描述"
 
 msgid "Detecting filesystem type failed."
 msgstr "偵測檔案系統類型失敗。"
@@ -555,6 +644,10 @@ msgstr "快照不合法。"
 msgid "Invalid ambit '%s'."
 msgstr "不適用的快照 '%s'。"
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "不適用的快照 '%s'。"
+
 # SLE12
 msgid "Invalid configdata."
 msgstr "無效的 configdata。"
@@ -597,6 +690,10 @@ msgstr "無效的使用者。"
 
 msgid "Invalid userdata."
 msgstr "不適用的 userdata 。"
+
+# SLE12
+msgid "Key"
+msgstr "鍵"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -670,6 +767,18 @@ msgstr "PiB"
 msgid "PiB"
 msgstr "PiB"
 
+msgid "Post #"
+msgstr "之後 #"
+
+msgid "Post Date"
+msgstr "之後 日期"
+
+msgid "Pre #"
+msgstr "之前 #"
+
+msgid "Pre Date"
+msgstr "之前 日期"
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr "定額錯誤 (%s)。"
@@ -689,6 +798,10 @@ msgstr "快照 '%u' 找不到。"
 # SLE12
 msgid "Snapshot is in use."
 msgstr "快照正在使用中。"
+
+# SLE12
+msgid "Subvolume"
+msgstr "子磁碟區"
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -715,6 +828,9 @@ msgstr "TiB"
 # SLE12
 msgid "Try 'snapper --help' for more information."
 msgstr "請嘗試執行「snapper --help」以獲得詳細資訊。"
+
+msgid "Type"
+msgstr "類型"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -751,6 +867,17 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr "使用介於 %d 到 %d 的整數。"
 
+msgid "Used Space"
+msgstr "已用空間"
+
+# SLE12
+msgid "User"
+msgstr "使用者"
+
+# SLE12
+msgid "Userdata"
+msgstr "使用者資料"
+
 # SLE12
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
@@ -760,6 +887,9 @@ msgstr "使用者資料「%s」沒有包含「=」符號。"
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr "使用者資料「%s」的鍵為空白。"
+
+msgid "Value"
+msgstr "值"
 
 # SLE12
 #, c-format
@@ -799,6 +929,9 @@ msgstr "B"
 msgid "modifying %s"
 msgstr "正在修改 %s"
 
+msgid "no"
+msgstr ""
+
 # SLE12
 msgid "nothing to do"
 msgstr "無執行動作"
@@ -810,108 +943,14 @@ msgstr "根引數只能與 no-dbus 配合使用。"
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "用法： snapper [--全域選項] <命令> [--命令選項] [命令參數]"
 
+msgid "yes"
+msgstr ""
+
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "未知類型的快照。"
 
-#~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-#~ msgstr "\t--all-configs, -a\t\t列出所有可存取組態中的快照。"
-
-#~ msgid "\t--disable-used-space\t\tDisable showing used space."
-#~ msgstr "\t--disable-used-space\t\t停用顯示已用空間的功能。"
-
-#~ msgid "\t--type, -t <type>\t\tType of snapshots to list."
-#~ msgstr "\t--type, -t <類型>\t\t要列出的快照類型。"
-
-# SLE12
-#~ msgid "\tsnapper get-config"
-#~ msgstr "\tsnapper get-config"
-
-# SLE12
-#~ msgid "\tsnapper list"
-#~ msgstr "\tsnapper list"
-
-# SLE12
-#~ msgid "\tsnapper list-configs"
-#~ msgstr "\tsnapper list-configs"
-
-#~ msgid "    Options for 'list' command:"
-#~ msgstr "    'list' 命令的選項："
-
-# SLE12
-#~ msgid "  Get config:"
-#~ msgstr "  取得組態︰"
-
-#~ msgid "  List configs:"
-#~ msgstr "  列出設定："
-
-#~ msgid "  List snapshots:"
-#~ msgstr "  列出快照："
-
-# SLE12
-#~ msgid "#"
-#~ msgstr "編號＼"
-
-#~ msgid "Cleanup"
-#~ msgstr "清理"
-
-# SLE12
-#~ msgid "Command 'get-config' does not take arguments."
-#~ msgstr "指令「get-config」未收到引數。"
-
-#~ msgid "Command 'list' does not take arguments."
-#~ msgstr "命令 'list' 不需參數。"
-
-#~ msgid "Command 'list-configs' does not take arguments."
-#~ msgstr "命令 'list-configs' 不需參數。"
-
-#~ msgid "Config"
-#~ msgstr "設定"
-
-#~ msgid "Date"
-#~ msgstr "日期"
-
-#~ msgid "Description"
-#~ msgstr "描述"
-
-# SLE12
-#~ msgid "Key"
-#~ msgstr "鍵"
-
-#~ msgid "Post #"
-#~ msgstr "之後 #"
-
-#~ msgid "Post Date"
-#~ msgstr "之後 日期"
-
-#~ msgid "Pre #"
-#~ msgstr "之前 #"
-
-#~ msgid "Pre Date"
-#~ msgstr "之前 日期"
-
-# SLE12
-#~ msgid "Subvolume"
-#~ msgstr "子磁碟區"
-
-#~ msgid "Type"
-#~ msgstr "類型"
-
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "未知類型的快照。"
-
-#~ msgid "Used Space"
-#~ msgstr "已用空間"
-
-# SLE12
-#~ msgid "User"
-#~ msgstr "使用者"
-
-# SLE12
-#~ msgid "Userdata"
-#~ msgstr "使用者資料"
-
-#~ msgid "Value"
-#~ msgstr "值"
 
 # SLE12
 #~ msgid "Quota failure (%s)."
