--- a/po/zu.po
+++ b/po/zu.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: installation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2016-04-19 09:51+0000\n"
 "Last-Translator: Shane Wims <shane.wims@microfocus.com>\n"
 "Language-Team: Zulu <http://l10n.opensuse.org/projects/snapper/master/zu/>\n"
@@ -16,6 +16,10 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 2.5\n"
 
+#, fuzzy
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr "\t-- all-configs, -a\t\tList snapshots from accessible configs."
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -23,6 +27,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -41,6 +58,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -115,6 +135,9 @@ msgstr ""
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr ""
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr ""
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr ""
 
@@ -146,6 +169,15 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
+msgstr ""
+
+msgid "\tsnapper get-config"
+msgstr ""
+
+msgid "\tsnapper list"
+msgstr ""
+
+msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -194,6 +226,18 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
+msgid "    Options for 'get-config' command:"
+msgstr ""
+
+msgid "    Options for 'list' command:"
+msgstr ""
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -227,6 +271,16 @@ msgstr ""
 msgid "  Delete snapshot:"
 msgstr ""
 
+msgid "  Get config:"
+msgstr ""
+
+msgid "  List configs:"
+msgstr ""
+
+#, fuzzy
+msgid "  List snapshots:"
+msgstr "Uhlobo olungaziwa."
+
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -250,6 +304,9 @@ msgstr "Uhlobo olungaziwa."
 msgid "  Undo changes:"
 msgstr ""
 
+msgid "#"
+msgstr ""
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -271,6 +328,9 @@ msgstr "Isiphakeli %s asizange sitholakale."
 #, fuzzy
 msgid "ACL error."
 msgstr "iphutha"
+
+msgid "Active"
+msgstr ""
 
 msgid "Active snapshot is already default snapshot."
 msgstr ""
@@ -299,6 +359,9 @@ msgid "Cannot detect ambit since default subvolume is unknown."
 msgstr ""
 
 msgid "Cannot do rollback since default subvolume is unknown."
+msgstr ""
+
+msgid "Cleanup"
 msgstr ""
 
 #, fuzzy
@@ -330,8 +393,20 @@ msgid "Command 'diff' needs at least one argument."
 msgstr "u-thola udinga okungenani i-argument eyodwa"
 
 #, fuzzy
+msgid "Command 'get-config' does not take arguments."
+msgstr "u- hlela_amaqembu akumelwe abe nama-argument"
+
+#, fuzzy
 msgid "Command 'help' does not take arguments."
 msgstr "u-faka futhi akumelwe abe nama-argument"
+
+#, fuzzy
+msgid "Command 'list' does not take arguments."
+msgstr "u-faka futhi akumelwe abe nama-argument"
+
+#, fuzzy
+msgid "Command 'list-configs' does not take arguments."
+msgstr "u- hlela_amaqembu akumelwe abe nama-argument"
 
 #, fuzzy
 msgid "Command 'modify' needs at least one argument."
@@ -376,6 +451,10 @@ msgstr "u-thola udinga okungenani i-argument eyodwa"
 #, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "u-thola udinga okungenani i-argument eyodwa"
+
+#, fuzzy
+msgid "Config"
+msgstr "Idayalogi Yokuhlela"
 
 #, fuzzy, c-format
 msgid "Config '%s' is invalid."
@@ -430,6 +509,13 @@ msgstr "Inqunta amafayela okuhlela..."
 msgid "Creating snapshot failed."
 msgstr "Inqunta amafayela okuhlela..."
 
+#, fuzzy
+msgid "Date"
+msgstr "Usuku: %1"
+
+msgid "Default"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Inqunta amafayela okuhlela..."
@@ -443,6 +529,9 @@ msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "Ukususa i-CA kuhlulekile: %1."
 msgstr[1] "Ukususa i-CA kuhlulekile: %1."
+
+msgid "Description"
+msgstr "Incazelo"
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -540,6 +629,10 @@ msgstr "Akunanjongo %1."
 msgid "Invalid ambit '%s'."
 msgstr "Akunanjongo %1."
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "Akunanjongo %1."
+
 #, fuzzy
 msgid "Invalid configdata."
 msgstr "Ukwaziswa okukhishiwe okungekho emthethweni."
@@ -580,6 +673,10 @@ msgstr "Akunanjongo %1."
 #, fuzzy
 msgid "Invalid userdata."
 msgstr "Akunanjongo %1."
+
+#, fuzzy
+msgid "Key"
+msgstr "Kenya"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -652,6 +749,21 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+#, fuzzy
+msgid "Post #"
+msgstr "Ngemva kokuqala"
+
+#, fuzzy
+msgid "Post Date"
+msgstr "Ngemva kokuqala"
+
+msgid "Pre #"
+msgstr ""
+
+#, fuzzy
+msgid "Pre Date"
+msgstr "Ngemva kokuqala"
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -672,6 +784,9 @@ msgstr "Isiphakeli %s asizange sitholakale."
 #, fuzzy
 msgid "Snapshot is in use."
 msgstr "Isiphakeli %s asizange sitholakale."
+
+msgid "Subvolume"
+msgstr ""
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -697,6 +812,9 @@ msgstr ""
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
 msgstr "Zama `%s --usizo' noma `%s –ukusetshenziswa' kokwaziswa okwengeziwe.\n"
+
+msgid "Type"
+msgstr "Uhlobo"
 
 #, fuzzy, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -732,6 +850,16 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+msgid "User"
+msgstr ""
+
+#, fuzzy
+msgid "Userdata"
+msgstr "Akunanjongo %1."
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
@@ -739,6 +867,9 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+msgid "Value"
+msgstr "I-value"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -776,6 +907,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr ""
 
+msgid "no"
+msgstr ""
+
 #, fuzzy
 msgid "nothing to do"
 msgstr "Akukho okuzokwenziwa."
@@ -787,54 +921,16 @@ msgstr "Zama `%s --usizo' noma `%s –ukusetshenziswa' kokwaziswa okwengeziwe.\n
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
 
+msgid "yes"
+msgstr ""
+
 #, fuzzy
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Uhlobo olungaziwa."
 
 #, fuzzy
-#~ msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
-#~ msgstr "\t-- all-configs, -a\t\tList snapshots from accessible configs."
-
-#, fuzzy
-#~ msgid "Command 'get-config' does not take arguments."
-#~ msgstr "u- hlela_amaqembu akumelwe abe nama-argument"
-
-#, fuzzy
-#~ msgid "Command 'list' does not take arguments."
-#~ msgstr "u-faka futhi akumelwe abe nama-argument"
-
-#, fuzzy
-#~ msgid "Command 'list-configs' does not take arguments."
-#~ msgstr "u- hlela_amaqembu akumelwe abe nama-argument"
-
-#, fuzzy
-#~ msgid "Config"
-#~ msgstr "Idayalogi Yokuhlela"
-
-#, fuzzy
-#~ msgid "Date"
-#~ msgstr "Usuku: %1"
-
-#~ msgid "Description"
-#~ msgstr "Incazelo"
-
-#, fuzzy
-#~ msgid "Key"
-#~ msgstr "Kenya"
-
-#, fuzzy
-#~ msgid "Post Date"
-#~ msgstr "Ngemva kokuqala"
-
-#~ msgid "Type"
-#~ msgstr "Uhlobo"
-
-#, fuzzy
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "Uhlobo olungaziwa."
-
-#~ msgid "Value"
-#~ msgstr "I-value"
 
 #, fuzzy
 #~ msgid "Quota failure (%s)."
