--- a/po/fa.po
+++ b/po/fa.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opensuse-i 18n\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2016-11-05 14:28+0000\n"
 "Last-Translator: hayyan rostami <hayyan71@yahoo.com>\n"
 "Language-Team: Persian <https://l10n.opensuse.org/projects/snapper/master/fa/>\n"
@@ -15,6 +15,9 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 2.6\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr ""
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -22,6 +25,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -40,6 +56,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -114,6 +133,9 @@ msgstr ""
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr ""
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr ""
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr ""
 
@@ -145,6 +167,15 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
+msgstr ""
+
+msgid "\tsnapper get-config"
+msgstr ""
+
+msgid "\tsnapper list"
+msgstr ""
+
+msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -192,6 +223,18 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
+msgid "    Options for 'get-config' command:"
+msgstr ""
+
+msgid "    Options for 'list' command:"
+msgstr ""
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -225,6 +268,15 @@ msgstr ""
 msgid "  Delete snapshot:"
 msgstr ""
 
+msgid "  Get config:"
+msgstr ""
+
+msgid "  List configs:"
+msgstr ""
+
+msgid "  List snapshots:"
+msgstr ""
+
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -246,6 +298,9 @@ msgstr ""
 msgid "  Undo changes:"
 msgstr ""
 
+msgid "#"
+msgstr ""
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -265,6 +320,9 @@ msgid "(Snapshot %d.)"
 msgstr ""
 
 msgid "ACL error."
+msgstr ""
+
+msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
@@ -296,6 +354,9 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Cleanup"
+msgstr ""
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr ""
 
@@ -317,7 +378,16 @@ msgstr ""
 msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
+msgid "Command 'get-config' does not take arguments."
+msgstr ""
+
 msgid "Command 'help' does not take arguments."
+msgstr ""
+
+msgid "Command 'list' does not take arguments."
+msgstr ""
+
+msgid "Command 'list-configs' does not take arguments."
 msgstr ""
 
 msgid "Command 'modify' needs at least one argument."
@@ -352,6 +422,9 @@ msgid "Command 'undochange' needs at least one argument."
 msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
+msgstr ""
+
+msgid "Config"
 msgstr ""
 
 #, c-format
@@ -403,6 +476,12 @@ msgstr ""
 msgid "Creating snapshot failed."
 msgstr ""
 
+msgid "Date"
+msgstr ""
+
+msgid "Default"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr ""
@@ -416,6 +495,9 @@ msgid_plural "Deleting snapshots from %s:"
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
+
+msgid "Description"
+msgstr ""
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -504,6 +586,10 @@ msgstr ""
 msgid "Invalid ambit '%s'."
 msgstr ""
 
+#, c-format
+msgid "Invalid column '%s'."
+msgstr ""
+
 msgid "Invalid configdata."
 msgstr ""
 
@@ -539,6 +625,9 @@ msgid "Invalid user."
 msgstr ""
 
 msgid "Invalid userdata."
+msgstr ""
+
+msgid "Key"
 msgstr ""
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
@@ -609,6 +698,18 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+msgid "Post #"
+msgstr ""
+
+msgid "Post Date"
+msgstr ""
+
+msgid "Pre #"
+msgstr ""
+
+msgid "Pre Date"
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr ""
@@ -625,6 +726,9 @@ msgid "Snapshot '%u' not found."
 msgstr ""
 
 msgid "Snapshot is in use."
+msgstr ""
+
+msgid "Subvolume"
 msgstr ""
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
@@ -649,6 +753,9 @@ msgid "TiB"
 msgstr ""
 
 msgid "Try 'snapper --help' for more information."
+msgstr ""
+
+msgid "Type"
 msgstr ""
 
 #, c-format
@@ -684,12 +791,24 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+msgid "User"
+msgstr ""
+
+msgid "Userdata"
+msgstr ""
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
 
 #, c-format
 msgid "Userdata '%s' has empty key."
+msgstr ""
+
+msgid "Value"
 msgstr ""
 
 #, c-format
@@ -728,6 +847,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr ""
 
+msgid "no"
+msgstr ""
+
 msgid "nothing to do"
 msgstr ""
 
@@ -736,3 +858,6 @@ msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "استفاده: snapper [--global-options] <command> [--command-options] [command-arguments]"
+
+msgid "yes"
+msgstr ""
