--- a/po/pa.po
+++ b/po/pa.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2005-08-15 12:20+0530\n"
 "Last-Translator: Amanpreet Singh Alam <amanpreetalam@yahoo.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
@@ -19,6 +19,9 @@ msgstr ""
 "X-Generator: KBabel 1.10.1\n"
 "Plural-Forms: Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr ""
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -26,6 +29,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -44,6 +60,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -118,6 +137,9 @@ msgstr ""
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr ""
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr ""
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr ""
 
@@ -150,6 +172,15 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
+msgstr ""
+
+msgid "\tsnapper get-config"
+msgstr ""
+
+msgid "\tsnapper list"
+msgstr ""
+
+msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -198,6 +229,18 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
+msgid "    Options for 'get-config' command:"
+msgstr ""
+
+msgid "    Options for 'list' command:"
+msgstr ""
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -238,6 +281,22 @@ msgstr ""
 msgid "  Delete snapshot:"
 msgstr ""
 
+#, fuzzy
+msgid "  Get config:"
+msgstr ""
+"%s - PAM ਸੰਰਚਨਾ ਫਾਇਲਾਂ ਬਣਾਓ।\n"
+"\n"
+
+#, fuzzy
+msgid "  List configs:"
+msgstr ""
+"%s - PAM ਸੰਰਚਨਾ ਫਾਇਲਾਂ ਬਣਾਓ।\n"
+"\n"
+
+#, fuzzy
+msgid "  List snapshots:"
+msgstr "ਬਣਾਇਆ ਗਿਆ: "
+
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -264,6 +323,9 @@ msgstr "ਬਣਾਇਆ ਗਿਆ: "
 msgid "  Undo changes:"
 msgstr ""
 
+msgid "#"
+msgstr ""
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -283,6 +345,9 @@ msgid "(Snapshot %d.)"
 msgstr ""
 
 msgid "ACL error."
+msgstr ""
+
+msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
@@ -315,6 +380,10 @@ msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
 #, fuzzy
+msgid "Cleanup"
+msgstr "ਸਫ਼ਾਈ ਕੀਤੀ"
+
+#, fuzzy
 msgid "Command 'cleanup' needs one arguments."
 msgstr "ਇੱਕ ਆਰਗੂਮਿੰਟ ਦੀ ਲੋੜ ਹੈ"
 
@@ -342,8 +411,20 @@ msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
 #, fuzzy
+msgid "Command 'get-config' does not take arguments."
+msgstr "list_groups ਲਈ ਕੋਈ ਆਰਗੂਮਿੰਟ ਨਹੀਂ ਚਾਹੀਦਾ ਹੈ"
+
+#, fuzzy
 msgid "Command 'help' does not take arguments."
 msgstr "ਰੀ-ਲੋਡ ਲਈ ਕੋਈ ਆਰਗੂਮਿੰਟ ਨਹੀਂ ਚਾਹੀਦਾ"
+
+#, fuzzy
+msgid "Command 'list' does not take arguments."
+msgstr "ਰੀ-ਲੋਡ ਲਈ ਕੋਈ ਆਰਗੂਮਿੰਟ ਨਹੀਂ ਚਾਹੀਦਾ"
+
+#, fuzzy
+msgid "Command 'list-configs' does not take arguments."
+msgstr "list_groups ਲਈ ਕੋਈ ਆਰਗੂਮਿੰਟ ਨਹੀਂ ਚਾਹੀਦਾ ਹੈ"
 
 #, fuzzy
 msgid "Command 'modify' needs at least one argument."
@@ -386,6 +467,10 @@ msgstr "get ਨੂੰ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਆਰਗੂਮਿੰਟ 
 #, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "get ਨੂੰ ਘੱਟੋ-ਘੱਟ ਇੱਕ ਆਰਗੂਮਿੰਟ ਲੋੜੀਦਾ ਹੈ"
+
+#, fuzzy
+msgid "Config"
+msgstr "kdmconfig"
 
 #, fuzzy, c-format
 msgid "Config '%s' is invalid."
@@ -439,6 +524,13 @@ msgstr ""
 msgid "Creating snapshot failed."
 msgstr "ਸੰਰਚਨਾ ਫਾਇਲ ਪਾਰਸ ਕੀਤੀ ਜਾ ਰਹੀ ਹੈ..."
 
+#, fuzzy
+msgid "Date"
+msgstr "ਮਿਤੀ: %1"
+
+msgid "Default"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "ਸੰਰਚਨਾ ਫਾਇਲ ਪਾਰਸ ਕੀਤੀ ਜਾ ਰਹੀ ਹੈ..."
@@ -452,6 +544,9 @@ msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "CA ਹਟਾਉਣਾ ਫੇਲ੍ਹ ਹੋਇਆ: %1"
 msgstr[1] "CA ਹਟਾਉਣਾ ਫੇਲ੍ਹ ਹੋਇਆ: %1"
+
+msgid "Description"
+msgstr "ਵੇਰਵਾ"
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -547,6 +642,10 @@ msgstr "ਗਲਤ ਕਿਸਮ %1 ਹੈ।"
 msgid "Invalid ambit '%s'."
 msgstr "ਗਲਤ ਕਿਸਮ %1 ਹੈ।"
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "ਗਲਤ ਕਿਸਮ %1 ਹੈ।"
+
 #, fuzzy
 msgid "Invalid configdata."
 msgstr "ਗਲਤ ਮੁੱਦਾ ਡਾਟਾ ਹੈ।"
@@ -585,6 +684,10 @@ msgstr ""
 #, fuzzy
 msgid "Invalid userdata."
 msgstr "ਗਲਤ ਕਿਸਮ %1 ਹੈ।"
+
+#, fuzzy
+msgid "Key"
+msgstr "ਕੀਨੀਆ"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -657,6 +760,21 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+#, fuzzy
+msgid "Post #"
+msgstr "ਪੋਸਟ-ਸਟਾਰਟ"
+
+#, fuzzy
+msgid "Post Date"
+msgstr "ਪੋਸਟ-ਸਟਾਰਟ"
+
+msgid "Pre #"
+msgstr ""
+
+#, fuzzy
+msgid "Pre Date"
+msgstr "ਪੋਸਟ-ਸਟਾਰਟ"
+
 # error box title
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -675,6 +793,9 @@ msgid "Snapshot '%u' not found."
 msgstr "%s '%s' ਨਹੀਂ ਲੱਭੀ"
 
 msgid "Snapshot is in use."
+msgstr ""
+
+msgid "Subvolume"
 msgstr ""
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
@@ -701,6 +822,9 @@ msgstr ""
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
 msgstr "ਹੋਰ ਜਾਣਕਾਰੀ ਲਈ `%s --help' ਜਾਂ `%s --usage' ਨੂੰ ਵੇਖੋ।\n"
+
+msgid "Type"
+msgstr "ਕਿਸਮ"
 
 #, fuzzy, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -736,6 +860,15 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+msgid "User"
+msgstr ""
+
+msgid "Userdata"
+msgstr ""
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
@@ -743,6 +876,9 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+msgid "Value"
+msgstr "ਮੁੱਲ"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -780,6 +916,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr ""
 
+msgid "no"
+msgstr ""
+
 #, fuzzy
 msgid "nothing to do"
 msgstr "ਕੁਝ ਵੀ ਨਹੀਂ ਹੈ।"
@@ -791,60 +930,16 @@ msgstr "ਹੋਰ ਜਾਣਕਾਰੀ ਲਈ `%s --help' ਜਾਂ `%s --usage
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr ""
 
+msgid "yes"
+msgstr ""
+
 #, fuzzy
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "ਅਣਜਾਣ ਕਿਸਮ ਹੈ।"
 
 #, fuzzy
-#~ msgid "  Get config:"
-#~ msgstr ""
-#~ "%s - PAM ਸੰਰਚਨਾ ਫਾਇਲਾਂ ਬਣਾਓ।\n"
-#~ "\n"
-
-#, fuzzy
-#~ msgid "Cleanup"
-#~ msgstr "ਸਫ਼ਾਈ ਕੀਤੀ"
-
-#, fuzzy
-#~ msgid "Command 'get-config' does not take arguments."
-#~ msgstr "list_groups ਲਈ ਕੋਈ ਆਰਗੂਮਿੰਟ ਨਹੀਂ ਚਾਹੀਦਾ ਹੈ"
-
-#, fuzzy
-#~ msgid "Command 'list' does not take arguments."
-#~ msgstr "ਰੀ-ਲੋਡ ਲਈ ਕੋਈ ਆਰਗੂਮਿੰਟ ਨਹੀਂ ਚਾਹੀਦਾ"
-
-#, fuzzy
-#~ msgid "Command 'list-configs' does not take arguments."
-#~ msgstr "list_groups ਲਈ ਕੋਈ ਆਰਗੂਮਿੰਟ ਨਹੀਂ ਚਾਹੀਦਾ ਹੈ"
-
-#, fuzzy
-#~ msgid "Config"
-#~ msgstr "kdmconfig"
-
-#, fuzzy
-#~ msgid "Date"
-#~ msgstr "ਮਿਤੀ: %1"
-
-#~ msgid "Description"
-#~ msgstr "ਵੇਰਵਾ"
-
-#, fuzzy
-#~ msgid "Key"
-#~ msgstr "ਕੀਨੀਆ"
-
-#, fuzzy
-#~ msgid "Post Date"
-#~ msgstr "ਪੋਸਟ-ਸਟਾਰਟ"
-
-#~ msgid "Type"
-#~ msgstr "ਕਿਸਮ"
-
-#, fuzzy
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "ਅਣਜਾਣ ਕਿਸਮ ਹੈ।"
-
-#~ msgid "Value"
-#~ msgstr "ਮੁੱਲ"
 
 #, fuzzy
 #~ msgid "Command '%s' does not work without DBus."
