--- a/po/snapper.pot
+++ b/po/snapper.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,6 +18,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr ""
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -25,6 +28,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr ""
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -43,6 +59,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -117,6 +136,9 @@ msgstr ""
 msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr ""
 
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr ""
+
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr ""
 
@@ -148,6 +170,15 @@ msgid "\tsnapper delete-config"
 msgstr ""
 
 msgid "\tsnapper diff <number1>..<number2> [files]"
+msgstr ""
+
+msgid "\tsnapper get-config"
+msgstr ""
+
+msgid "\tsnapper list"
+msgstr ""
+
+msgid "\tsnapper list-configs"
 msgstr ""
 
 msgid "\tsnapper modify <number>"
@@ -195,6 +226,18 @@ msgstr ""
 msgid "    Options for 'diff' command:"
 msgstr ""
 
+msgid "    Options for 'get-config' command:"
+msgstr ""
+
+msgid "    Options for 'list' command:"
+msgstr ""
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr ""
 
@@ -228,6 +271,15 @@ msgstr ""
 msgid "  Delete snapshot:"
 msgstr ""
 
+msgid "  Get config:"
+msgstr ""
+
+msgid "  List configs:"
+msgstr ""
+
+msgid "  List snapshots:"
+msgstr ""
+
 msgid "  Modify snapshot:"
 msgstr ""
 
@@ -249,6 +301,9 @@ msgstr ""
 msgid "  Undo changes:"
 msgstr ""
 
+msgid "#"
+msgstr ""
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -268,6 +323,9 @@ msgid "(Snapshot %d.)"
 msgstr ""
 
 msgid "ACL error."
+msgstr ""
+
+msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
@@ -299,6 +357,9 @@ msgstr ""
 msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
+msgid "Cleanup"
+msgstr ""
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr ""
 
@@ -320,7 +381,16 @@ msgstr ""
 msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
+msgid "Command 'get-config' does not take arguments."
+msgstr ""
+
 msgid "Command 'help' does not take arguments."
+msgstr ""
+
+msgid "Command 'list' does not take arguments."
+msgstr ""
+
+msgid "Command 'list-configs' does not take arguments."
 msgstr ""
 
 msgid "Command 'modify' needs at least one argument."
@@ -355,6 +425,9 @@ msgid "Command 'undochange' needs at least one argument."
 msgstr ""
 
 msgid "Command 'xadiff' needs at least one argument."
+msgstr ""
+
+msgid "Config"
 msgstr ""
 
 #, c-format
@@ -406,6 +479,12 @@ msgstr ""
 msgid "Creating snapshot failed."
 msgstr ""
 
+msgid "Date"
+msgstr ""
+
+msgid "Default"
+msgstr ""
+
 #, c-format
 msgid "Deleting config failed (%s)."
 msgstr ""
@@ -418,6 +497,9 @@ msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] ""
 msgstr[1] ""
+
+msgid "Description"
+msgstr ""
 
 msgid "Detecting filesystem type failed."
 msgstr ""
@@ -506,6 +588,10 @@ msgstr ""
 msgid "Invalid ambit '%s'."
 msgstr ""
 
+#, c-format
+msgid "Invalid column '%s'."
+msgstr ""
+
 msgid "Invalid configdata."
 msgstr ""
 
@@ -541,6 +627,9 @@ msgid "Invalid user."
 msgstr ""
 
 msgid "Invalid userdata."
+msgstr ""
+
+msgid "Key"
 msgstr ""
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
@@ -611,6 +700,18 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+msgid "Post #"
+msgstr ""
+
+msgid "Post Date"
+msgstr ""
+
+msgid "Pre #"
+msgstr ""
+
+msgid "Pre Date"
+msgstr ""
+
 #, c-format
 msgid "Quota error (%s)."
 msgstr ""
@@ -627,6 +728,9 @@ msgid "Snapshot '%u' not found."
 msgstr ""
 
 msgid "Snapshot is in use."
+msgstr ""
+
+msgid "Subvolume"
 msgstr ""
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
@@ -651,6 +755,9 @@ msgid "TiB"
 msgstr ""
 
 msgid "Try 'snapper --help' for more information."
+msgstr ""
+
+msgid "Type"
 msgstr ""
 
 #, c-format
@@ -686,12 +793,24 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+msgid "User"
+msgstr ""
+
+msgid "Userdata"
+msgstr ""
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
 
 #, c-format
 msgid "Userdata '%s' has empty key."
+msgstr ""
+
+msgid "Value"
 msgstr ""
 
 #, c-format
@@ -730,6 +849,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr ""
 
+msgid "no"
+msgstr ""
+
 msgid "nothing to do"
 msgstr ""
 
@@ -737,4 +859,7 @@ msgid "root argument can be used only together with no-dbus.\n"
 msgstr ""
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
+msgstr ""
+
+msgid "yes"
 msgstr ""
