--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-23 10:33+0200\n"
+"POT-Creation-Date: 2020-09-23 18:35+0200\n"
 "PO-Revision-Date: 2019-03-01 20:28+0000\n"
 "Last-Translator: Murat Servan Kahraman <muratservan@outlook.com>\n"
 "Language-Team: Turkish <https://l10n.opensuse.org/projects/snapper/master/tr/>\n"
@@ -19,6 +19,9 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.3\n"
 
+msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
+msgstr ""
+
 msgid "\t--ambit, -a ambit\t\tOperate in the specified ambit."
 msgstr ""
 
@@ -26,6 +29,19 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
 msgstr "\t--cleanup-algorithm, -c <algo>\tAnlık görüntüler için temizleme algoritması."
 
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
+"\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
+"\t\t\t\t\tpre-number, post-number, post-date."
+msgstr ""
+
+msgid ""
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: key, value.\n"
+"\t\t\t\t\tColumns are not selected when JSON format is used."
 msgstr ""
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
@@ -45,6 +61,10 @@ msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr ""
+
+#, fuzzy
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--filtreleri-gösterme\t\tFiltreleri gösterme."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr ""
@@ -124,6 +144,10 @@ msgid "\t--type, -t <type>\t\tType for snapshot."
 msgstr "\t--type, -t <type>\t\tAnlık görüntü türü."
 
 #, fuzzy
+msgid "\t--type, -t <type>\t\tType of snapshots to list."
+msgstr "\t--tip, -t <type>\t\tListelemek için anlım görüntü tipleri."
+
+#, fuzzy
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
 msgstr "\t--kullanıcıverisi, -u <userdata>\tAnlık görüntü için kullanıcı verisi."
 
@@ -162,6 +186,18 @@ msgstr "\tyakalayıcı yapılandırmayı listele"
 #, fuzzy
 msgid "\tsnapper diff <number1>..<number2> [files]"
 msgstr "\tyakalayıcı fark <number1>..<number2> [dosyalar]"
+
+#, fuzzy
+msgid "\tsnapper get-config"
+msgstr "\tyakalayıcı yapılandırmayı listele"
+
+#, fuzzy
+msgid "\tsnapper list"
+msgstr "\tyakalayıcı listele"
+
+#, fuzzy
+msgid "\tsnapper list-configs"
+msgstr "\tyakalayıcı yapılandırmayı listele"
 
 #, fuzzy
 msgid "\tsnapper modify <number>"
@@ -219,6 +255,19 @@ msgstr "    'oluştur' komutu için seçenekler:"
 msgid "    Options for 'diff' command:"
 msgstr "    'değiştir' komutu için seçenekler:"
 
+#, fuzzy
+msgid "    Options for 'get-config' command:"
+msgstr "    'create-config' komutu için seçenekler:"
+
+msgid "    Options for 'list' command:"
+msgstr "    'list' komutu için seçenekler:"
+
+msgid ""
+"    Options for 'list-configs' command:\n"
+"\t--columns <columns>\t\tColumns to show separated by comma.\n"
+"\t\t\t\t\tPossible columns: config, subvolume.\n"
+msgstr ""
+
 msgid "    Options for 'modify' command:"
 msgstr "    'modify' komutu için seçenekler:"
 
@@ -261,6 +310,19 @@ msgstr " Yapılandırma oluştur: "
 msgid "  Delete snapshot:"
 msgstr "  Anlık görüntüyü sil:"
 
+# clients/inst_custom_part.ycp:2940
+#, fuzzy
+msgid "  Get config:"
+msgstr " Yapılandırma oluştur: "
+
+#, fuzzy
+msgid "  List configs:"
+msgstr "  Yapılandırmayı listele:"
+
+#, fuzzy
+msgid "  List snapshots:"
+msgstr "  Anlık görüntüleri listele:"
+
 #, fuzzy
 msgid "  Modify snapshot:"
 msgstr "  Anlık görüntüyü değiştir:"
@@ -290,6 +352,9 @@ msgstr "  Anlık görüntüyü çerçeveleme:"
 msgid "  Undo changes:"
 msgstr "  Değişikikleri geri al:"
 
+msgid "#"
+msgstr "#"
+
 #. TRANSLATORS: used to construct list of values
 #. %1$s is replaced by first value
 #. %2$s is replaced by second value
@@ -309,6 +374,9 @@ msgid "(Snapshot %d.)"
 msgstr ""
 
 msgid "ACL error."
+msgstr ""
+
+msgid "Active"
 msgstr ""
 
 msgid "Active snapshot is already default snapshot."
@@ -341,6 +409,10 @@ msgid "Cannot do rollback since default subvolume is unknown."
 msgstr ""
 
 #, fuzzy
+msgid "Cleanup"
+msgstr "Temizle"
+
+#, fuzzy
 msgid "Command 'cleanup' needs one arguments."
 msgstr "'temizle' komutu için bir argüman gereklidir."
 
@@ -368,8 +440,20 @@ msgid "Command 'diff' needs at least one argument."
 msgstr ""
 
 #, fuzzy
+msgid "Command 'get-config' does not take arguments."
+msgstr "'yapılandırmayı-listele' komutu argüman almamaktadır."
+
+#, fuzzy
 msgid "Command 'help' does not take arguments."
 msgstr "'yardım komutu' argüman almamaktadır."
+
+#, fuzzy
+msgid "Command 'list' does not take arguments."
+msgstr "'listele' komutu argüman almamaktadır."
+
+#, fuzzy
+msgid "Command 'list-configs' does not take arguments."
+msgstr "'yapılandırmayı-listele' komutu argüman almamaktadır."
 
 #, fuzzy
 msgid "Command 'modify' needs at least one argument."
@@ -412,6 +496,10 @@ msgstr "'değişiklikleri geri al' komutu için en az bir argüman gereklidir."
 #, fuzzy
 msgid "Command 'xadiff' needs at least one argument."
 msgstr "'değiştir' komutu için en az bir argüman gereklidir."
+
+#, fuzzy
+msgid "Config"
+msgstr "Yapılandırma"
 
 #, fuzzy, c-format
 msgid "Config '%s' is invalid."
@@ -465,6 +553,12 @@ msgstr ""
 msgid "Creating snapshot failed."
 msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
 
+msgid "Date"
+msgstr "Tarih"
+
+msgid "Default"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Deleting config failed (%s)."
 msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
@@ -477,6 +571,9 @@ msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
 msgid "Deleting snapshot from %s:"
 msgid_plural "Deleting snapshots from %s:"
 msgstr[0] "Yapılandırma oluşturma başarısız oldu (%s)."
+
+msgid "Description"
+msgstr "Tanım"
 
 msgid "Detecting filesystem type failed."
 msgstr "Dosya sistemi türünü tespit etme başarısız oldu."
@@ -572,6 +669,10 @@ msgstr "Geçersiz anlık görüntü."
 msgid "Invalid ambit '%s'."
 msgstr "Geçersiz '%s' anlık görüntüsü."
 
+#, fuzzy, c-format
+msgid "Invalid column '%s'."
+msgstr "Geçersiz '%s' anlık görüntüsü."
+
 #, fuzzy
 msgid "Invalid configdata."
 msgstr "Geçersiz kullanıcı verisi."
@@ -611,6 +712,11 @@ msgstr ""
 
 msgid "Invalid userdata."
 msgstr "Geçersiz kullanıcı verisi."
+
+# KE
+#, fuzzy
+msgid "Key"
+msgstr "Kenya"
 
 #. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
 msgid "KiB"
@@ -683,6 +789,22 @@ msgstr ""
 msgid "PiB"
 msgstr ""
 
+#, fuzzy
+msgid "Post #"
+msgstr "Posta #"
+
+#, fuzzy
+msgid "Post Date"
+msgstr "Mesaj Tarihi"
+
+#, fuzzy
+msgid "Pre #"
+msgstr "Önce #"
+
+#, fuzzy
+msgid "Pre Date"
+msgstr "Düzenlenme Tarihi"
+
 # include/ui/common_messages.ycp:95
 #, fuzzy, c-format
 msgid "Quota error (%s)."
@@ -702,6 +824,10 @@ msgstr "'%u' anlık görüntüsü bulunamadı."
 
 msgid "Snapshot is in use."
 msgstr ""
+
+#, fuzzy
+msgid "Subvolume"
+msgstr "Arkases"
 
 #. TRANSLATORS: symbol for "tera" (best keep untranslated)
 msgid "T"
@@ -727,6 +853,9 @@ msgstr ""
 #, fuzzy
 msgid "Try 'snapper --help' for more information."
 msgstr "Daha fazla bilgi için 'Yakalayıcı yardımı'nı okumayı deneyin."
+
+msgid "Type"
+msgstr "Tür"
 
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
@@ -762,6 +891,16 @@ msgstr ""
 msgid "Use an integer number from %d to %d."
 msgstr ""
 
+msgid "Used Space"
+msgstr ""
+
+#, fuzzy
+msgid "User"
+msgstr "Kullanıcı verisi"
+
+msgid "Userdata"
+msgstr "Kullanıcı verisi"
+
 #, c-format
 msgid "Userdata '%s' does not include '=' sign."
 msgstr ""
@@ -769,6 +908,9 @@ msgstr ""
 #, c-format
 msgid "Userdata '%s' has empty key."
 msgstr ""
+
+msgid "Value"
+msgstr "Değer"
 
 #, c-format
 msgid "create:%d modify:%d delete:%d"
@@ -806,6 +948,9 @@ msgstr ""
 msgid "modifying %s"
 msgstr "%s üzerinde değişiklik yapılıyor"
 
+msgid "no"
+msgstr ""
+
 msgid "nothing to do"
 msgstr ""
 
@@ -817,116 +962,16 @@ msgstr "Daha fazla bilgi için 'Yakalayıcı yardımı'nı okumayı deneyin."
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "kullanım: yakalayıcı  [--global-options] <command> [--command-options] [command-arguments]"
 
+msgid "yes"
+msgstr ""
+
 #, fuzzy
 #~ msgid "Unknown type of snapshot."
 #~ msgstr "Bilinmeyen anlık görüntü formatı."
 
 #, fuzzy
-#~ msgid "\t--disable-used-space\t\tDisable showing used space."
-#~ msgstr "\t--filtreleri-gösterme\t\tFiltreleri gösterme."
-
-#, fuzzy
-#~ msgid "\t--type, -t <type>\t\tType of snapshots to list."
-#~ msgstr "\t--tip, -t <type>\t\tListelemek için anlım görüntü tipleri."
-
-#, fuzzy
-#~ msgid "\tsnapper get-config"
-#~ msgstr "\tyakalayıcı yapılandırmayı listele"
-
-#, fuzzy
-#~ msgid "\tsnapper list"
-#~ msgstr "\tyakalayıcı listele"
-
-#, fuzzy
-#~ msgid "\tsnapper list-configs"
-#~ msgstr "\tyakalayıcı yapılandırmayı listele"
-
-#~ msgid "    Options for 'list' command:"
-#~ msgstr "    'list' komutu için seçenekler:"
-
-# clients/inst_custom_part.ycp:2940
-#, fuzzy
-#~ msgid "  Get config:"
-#~ msgstr " Yapılandırma oluştur: "
-
-#, fuzzy
-#~ msgid "  List configs:"
-#~ msgstr "  Yapılandırmayı listele:"
-
-#, fuzzy
-#~ msgid "  List snapshots:"
-#~ msgstr "  Anlık görüntüleri listele:"
-
-#~ msgid "#"
-#~ msgstr "#"
-
-#, fuzzy
-#~ msgid "Cleanup"
-#~ msgstr "Temizle"
-
-#, fuzzy
-#~ msgid "Command 'get-config' does not take arguments."
-#~ msgstr "'yapılandırmayı-listele' komutu argüman almamaktadır."
-
-#, fuzzy
-#~ msgid "Command 'list' does not take arguments."
-#~ msgstr "'listele' komutu argüman almamaktadır."
-
-#, fuzzy
-#~ msgid "Command 'list-configs' does not take arguments."
-#~ msgstr "'yapılandırmayı-listele' komutu argüman almamaktadır."
-
-#, fuzzy
-#~ msgid "Config"
-#~ msgstr "Yapılandırma"
-
-#~ msgid "Date"
-#~ msgstr "Tarih"
-
-#~ msgid "Description"
-#~ msgstr "Tanım"
-
-# KE
-#, fuzzy
-#~ msgid "Key"
-#~ msgstr "Kenya"
-
-#, fuzzy
-#~ msgid "Post #"
-#~ msgstr "Posta #"
-
-#, fuzzy
-#~ msgid "Post Date"
-#~ msgstr "Mesaj Tarihi"
-
-#, fuzzy
-#~ msgid "Pre #"
-#~ msgstr "Önce #"
-
-#, fuzzy
-#~ msgid "Pre Date"
-#~ msgstr "Düzenlenme Tarihi"
-
-#, fuzzy
-#~ msgid "Subvolume"
-#~ msgstr "Arkases"
-
-#~ msgid "Type"
-#~ msgstr "Tür"
-
-#, fuzzy
 #~ msgid "Unknown type of snapshots."
 #~ msgstr "Bilinmeyen anlık görüntü formatı."
-
-#, fuzzy
-#~ msgid "User"
-#~ msgstr "Kullanıcı verisi"
-
-#~ msgid "Userdata"
-#~ msgstr "Kullanıcı verisi"
-
-#~ msgid "Value"
-#~ msgstr "Değer"
 
 #, fuzzy
 #~ msgid "Command '%s' does not work without DBus."
